--- a/jp/epidemiology-1.qmd
+++ b/jp/epidemiology-1.qmd
@@ -218,6 +218,12 @@ a:hover {
 
     $PF=\frac{\pi_2-\pi_1}{\pi_2}=1-RR$
 
+| 指標 | 分母（ターゲット集団） | 何を表す？ | いつ使う？ |
+|------|------|---------------------------|-------------|------------|
+| Excess fraction（寄与割合） | **曝露者だけ**（E=1） | 曝露集団のうち、どれだけの割合が曝露のため疾患を生じたか | 喫煙、飲酒、化学物質などの有害曝露の個人への影響を知りたいとき |
+| Preventable fraction（予防寄与割合） | **曝露者だけ**（E=1） | 曝露集団のうち、どれだけ予防的な曝露が疾患を防いだか | ワクチン・検診・運動などの予防法が、個人のリスクをどれだけ下げたか知りたいとき |
+| Population attributable fraction（集団寄与割合） | **全員**（集団全体） | 集団全体の疾患のうち、どれだけがその曝露のため生じているか | 公衆衛生・医療政策で、曝露をなくせば集団でどれだけ減るかを評価するとき |
+
 **数値例**
 
 いくつかの指標の数値例を示しておきましょう。この表は、 曝露と膵がんリスクの関係を調べる仮想的なコホート研究から得られたデータを表しています。上の式を用いて、リスク差、リスク比、オッズ比、excess fractionを求めると、以下のような結果が得られます。ワクチン有効率と同じように、excess fractionもパーセントで示すことがあるため、要注意です。
@@ -332,6 +338,14 @@ a:hover {
 
 ::: voice-father
 お父さん「そういうこと。寄与割合は、時間とともに変化することがあり得るんだ。時間が隠れているっていいうのは、リスク比やオッズ比も同じだけどね」
+:::
+
+::: voice-daughter
+私「なるほどね」
+:::
+
+::: voice-father
+お父さん「まとめるとね、"何%減る"とか"何%に効く"というパーセントを見たら、どの集団のことなのか、どの時点のリスクかを意識しよう、ということだね」
 :::
 ::::::::::::::::::::::::::::::::: 
 
