--- a/jp/epidemiology-3.qmd
+++ b/jp/epidemiology-3.qmd
@@ -187,9 +187,30 @@ $\pi_1$と$\pi_2$のどちらかが0.2を超えると、リスク比とオッズ
 
 |     | 0.1  | 0.2 | 0.3 | 0.4 | 0.5 | 0.6 | 0.7 | 0.8 | 0.9 |
 |-----|------|-----|-----|-----|-----|-----|-----|-----|-----|
-| 0.1 | RR=1 |     |     |     |     |     |     |     |     |
-
-OR=1 SOR=1 \| 0.50 0.44 0.67 \| 0.33 0.25 0.51 \| 0.25 0.17 0.41 \| 0.20 0.11 0.33 \| 0.17 0.07 0.27 \| 0.14 0.05 0.22 \| 0.13 0.03 0.17 \| 0.11 0.01 0.11 \| \| 0.2 \| \| 1 1 1 \| 0.67 0.58 0.76 \| 0.50 0.38 0.61 \| 0.40 0.25 0.50 \| 0.33 0.17 0.41 \| 0.29 0.11 0.33 \| 0.25 0.06 0.25 \| 0.22 0.03 0.17 \| \| 0.3 \| \| \| 1 1 1 \| 0.75 0.64 0.80 \| 0.60 0.43 0.65 \| 0.50 0.29 0.53 \| 0.43 0.18 0.43 \| 0.38 0.11 0.33 \| 0.33 0.05 0.22 \| \| 0.4 \| \| \| \| 1 1 1 \| 0.80 0.67 0.82 \| 0.67 0.44 0.67 \| 0.57 0.29 0.53 \| 0.50 0.17 0.41 \| 0.44 0.07 0.27 \| \| 0.5 \| \| \| \| \| 1 1 1 \| 0.83 0.67 0.82 \| 0.71 0.43 0.65 \| 0.63 0.25 0.50 \| 0.56 0.11 0.33 \| \| 0.6 \| \| \| \| \| \| 1 1 1 \| 0.86 0.64 0.80 \| 0.75 0.38 0.61 \| 0.67 0.17 0.41 \| \| 0.7 \| \| \| \| \| \| \| 1 1 1 \| 0.88 0.58 0.76 \| 0.78 0.26 0.51 \| \| 0.8 \| \| \| \| \| \| \| \| 1 1 1 \| 0.89 0.44 0.67 \| \| 0.9 \| \| \| \| \| \| \| \| \| 1 1 1 \|
+| 0.1 | RR=1 | 0.50| 0.33| 0.25| 0.20| 0.17| 0.14| 0.13| 0.11|
+|     | OR=1 | 0.44| 0.25| 0.17| 0.11| 0.07| 0.05| 0.03| 0.01|
+|     | SOR=1| 0.67| 0.51| 0.41| 0.33| 0.27| 0.22| 0.17| 0.11|
+| 0.2 |      |RR=1 | 0.67| 0.50| 0.40| 0.33| 0.29| 0.25| 0.22|
+|     |      |OR=1 | 0.58| 0.38| 0.25| 0.17| 0.11| 0.06| 0.03|
+|     |      |SOR=1| 0.76| 0.61| 0.50| 0.41| 0.33| 0.25| 0.17|
+| 0.3 |      |     |RR=1 | 0.75| 0.60| 0.50| 0.43| 0.38| 0.33|
+|     |      |     |OR=1 | 0.64| 0.43| 0.29| 0.18| 0.11| 0.05|
+|     |      |     |SOR=1| 0.80| 0.65| 0.53| 0.43| 0.33| 0.22|
+| 0.4 |      |     |     |RR=1 | 0.80| 0.67| 0.57| 0.50| 0.44|
+|     |      |     |     |OR=1 | 0.67| 0.44| 0.29| 0.17| 0.07|
+|     |      |     |     |SOR=1| 0.82| 0.67| 0.53| 0.41| 0.27|
+| 0.5 |      |     |     |     |RR=1 | 0.83| 0.71| 0.63| 0.56|
+|     |      |     |     |     |OR=1 | 0.67| 0.43| 0.25| 0.11|
+|     |      |     |     |     |SOR=1| 0.82| 0.65| 0.50| 0.33|
+| 0.6 |      |     |     |     |     |RR=1 | 0.86| 0.75| 0.67|
+|     |      |     |     |     |     |OR=1 | 0.64| 0.38| 0.17|
+|     |      |     |     |     |     |SOR=1| 0.80| 0.61| 0.41|
+| 0.7 |      |     |     |     |     |     |RR=1 | 0.88| 0.78|
+|     |      |     |     |     |     |     |OR=1 | 0.58| 0.26|
+|     |      |     |     |     |     |     |SOR=1| 0.76| 0.51|
+| 0.8 |      |     |     |     |     |     |     |RR=1 | 0.89|
+|     |      |     |     |     |     |     |     |OR=1 | 0.44|
+|     |      |     |     |     |     |     |     |SOR=1| 0.67|
 :::
 
 ::::::::::::::::::::::::::::::::: dialogue
