time point risk ratios

--- a/jp/epidemiology-1.qmd
+++ b/jp/epidemiology-1.qmd
@@ -179,7 +179,7 @@ a:hover {
 :::
 ::::::::::::::::::::::::::::::::: 
 
-::: {.callout-note title="リスクを比較する指標"}
+::: {.callout-note title="リスクを比較するための基本的な指標"}
 医学では分野によってさまざまな指標が用いられており、特に割合を比較する指標にはわかりにくいものが少なくありません。群1で得られた疾患リスク（割合）を$\pi_1$、群2の疾患リスク（割合）を$\pi_2$とすると、2群を比較するために、以下のような指標が用いられます。なお、これらの指標を使うときは、どちらの群を基準に比較しているかを意識することが大切です。ここでは群2を基準にとっています。
 
 -   リスク差（risk difference、絶対リスク減少）
@@ -193,17 +193,20 @@ a:hover {
 -   オッズ比（odds ratio）
 
     $OR=\frac{\pi_1/(1-\pi_1)}{\pi_2/(1-\pi_2)}$
+:::
 
-もし、2種類の治療のどちらが有効か評価するため、群1と群2を比較するときには、以下の指標もよく用いられます。どちらの指標でも$\pi_2>\pi_1$と想定されています。ワクチン有効率では、群2はプラセボ群です。
+::: {.callout-note title="治療後のリスクを比較するための指標"}
+特に、2種類の治療のどちらが有効か評価する状況では、以下の指標もよく用いられます。どちらの指標でも$\pi_2>\pi_1$と想定されています。ワクチン有効率では、群2はプラセボ群です。
 
 -   Number needed to treat（NNT）
 
     $NNT=\frac{1}{\pi_2-\pi_1}=-\frac{1}{RD}$
 
 -   ワクチン有効率（vaccine efficacy、相対リスク減少）
-
     $VF=\frac{\pi_2-\pi_1}{\pi_2}=1-RR$
+:::
 
+::: {.callout-note title="寄与割合とその関連指標"}
 疫学研究では、一般集団を対象にして、環境物質や生活習慣といったリスク因子を調べることが多く、そのために寄与割合（attributable fraction）という別の指標も用いられます。寄与割合は、特定の集団におけるリスク因子への曝露が、どのくらい疾患発症に寄与するかを表す指標です。ただし、寄与割合には、歴史的に異なる呼ばれ方をしており、どのような集団をターゲットとするかで定義も変わるので、正確に扱うべきです。
 
 曝露がリスク因子として働くときに用いられる指標として、多くの疫学の教科書で説明されているのは、以下の定義によるものです。この指標では、群1が曝露あり、群2が曝露なしと考えています。そして、群1から曝露を取り除いたとき、どのくらい疾患が減るかを表しています。
