--- a/jp/epidemiology-2.qmd
+++ b/jp/epidemiology-2.qmd
@@ -159,7 +159,7 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「がん検診後、10年、12年、20年って見ていくと、寄与割合が変わるって話だったでしょ。リスクには時間の概念があるって。あれって、2値データじゃなくて生存時間データになってない？ていうか、あれは生存曲線か」**
+私「がん検診後、10年、12年、20年って見ていくと、寄与割合が変わるって話だったでしょ。リスクには時間の概念があるって。あれって、2値データじゃなくて生存時間データになってない？ていうか、あれは生存曲線か」
 :::
 
 ::: voice-father
@@ -167,7 +167,7 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「寄与割合とかリスク比とかって、時間とともに変化するっていうけど、ハザード比は変化しないんだっけ」**
+私「寄与割合とかリスク比とかって、時間とともに変化するっていうけど、ハザード比は変化しないんだっけ」
 :::
 
 ::: voice-father
@@ -175,19 +175,17 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「リスク比は変化するけどハザード比は変化しないの？ぴんとこないなあ」**
+私「リスク比は変化するけどハザード比は変化しないの？ぴんとこないなあ」
 :::
 
 ::: voice-father
-お父さん「えーっと、教科書通りに説明するとこうなるんだけど」
+お父さん「えーっと、教科書通りに説明するとこうなるんだけど。まずはリスクとハザードからはじめるね」
 :::
 :::::::::::::::::::::::::::::::::
 
 
-::: {.callout-note title="リスクと生存曲線・ハザード比の関係"}
 
-**生存曲線とハザードの関係**
-
+::: {.callout-note title="生存曲線とハザードの関係"}
 Kaplan-Meier曲線もまた、割合の一種と考えることができますが、見え方がずいぶん違います。つまり、Kaplan-Meier曲線はグラフですし、時間の概念が含まれたりします。さらに、Kaplan-Meier曲線は、そもそも2値データではなく生存時間データに用いられる手法ですし、ハザード比との関係が重要です。ここでは、ハザードが時間を通じて一定という単純な状況で、そのあたりを整理しましょう。
 
 Kaplan-Meier曲線は、生存時間データから計算された推定値を、時間軸（*x*軸）に沿ってグラフにしたものです。これを数式で書くなら、「生存曲線を時間*x*の関数*S*(*x*)で表す」ということになります。
@@ -204,47 +202,8 @@ $M=\frac{\mathrm{log}(0.5)}{\lambda}\approx\frac{0.7}{\lambda}$
 
 $\pi=1-S(x)=1-\mathrm{exp}(-\lambda x)$
 
-**リスクとハザード比の関係**
 
-次に、群1と群2のアウトカムを比較する状況を考えましょう。群1の時点*x*の疾患リスクを$\pi_1$、群2の時点*x*の疾患リスクを$\pi_2$とします。さらに、それぞれの群のハザードを$\lambda_1$と$\lambda_2$、生存時間中央値を$M_1$と$M_2$とします。
-
-上で述べた関係式を適用すると、指数分布の下で、ハザード比は以下のように表現することができます。
-
--   ハザード比（指数分布を仮定）
-
-    $HR=\frac{\lambda_1}{\lambda_2}=\frac{M_2}{M_1}=\frac{\mathrm{log}(\pi_1)}{\mathrm{log}(\pi_2)}$
-
-**比例ハザード性**
-
-指数分布では、ハザードは時間を通じて一定でした。その一方で、Cox比例ハザードモデルでは、ハザードを時間の関数$\lambda_1(x)$と$\lambda_2(x)$と考え、しかも両者が比例関係にあると仮定します。
-
--   ハザード比（比例ハザード性を仮定）
-
-    $HR=\frac{\lambda_1(x)}{\lambda_2(x)}$
-:::
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-daughter
-私「わからん。数式はわからん」
-:::
-
-::: voice-father
-お父さん「そう？数学の難しさ自体は高校レベルなんだけど。きっと理解しにくいのは、数式がデータ上のどういう概念を結びつけているのかっていう部分なんだだと思うんだけど。そこは慣れるしかないなあ」
-:::
-
-
-::: {.callout-note title="シミュレーションデータ（再発あり）の生成"}
-前回の発展形として、シミュレーションデータを使って、全生存期間（OS）・無再発生存期間（RFS）・累積再発率（CIR）の違いをみてみましょう。CIRの解析では、再発の前に死亡した患者が存在するため、その扱いを決める必要があります。これを競合リスク（competing risk）といいます。
-
-以下のコードでは、死亡だけではなく再発を伴った生存時間アウトカム3種類をRで生成する「関数」generate_dataを定義しています。OSのイベントは「死亡」、RFSのイベントは「死亡と再発」です。CIRのイベントは「再発」ですが、死亡を競合リスクとして扱います。
-
--   ストーマ保有：2項分布（rbinom関数）から生成した2値データ
-
--   生存時間：指数分布（rexp関数）から生成した生存時間データ（t_relapse, t_death, t_censoringの乱数から計算）
-
-前回、競合リスクのない生存時間データを要約しましたが、そこで用いたのはKaplan-Meier曲線でしたよね。それに対して、競合リスクデータの解析では、Kaplan-Meier曲線ではなく、Aalen-Johansen曲線を用いるのが正式です。
-
-```{r echo=FALSE, warning=FALSE}
+```{r warning=FALSE}
 generate_data <- function(n=200, hr1, hr2) {
   stoma <- rbinom(n, size = 1, prob = 0.4)
   sex <- rbinom(n, size = 1, prob = 0.5)
@@ -292,6 +251,7 @@ generate_data <- function(n=200, hr1, hr2) {
 }
 ```
 
+イメージしやすいように、以前`cifmodeling`パッケージの`cifplot()`で描いたKaplan–Meier曲線をもう一度示しておきます。
 
 ```{r warning=FALSE}
 # devtools::install_github("gestimation/cifmodeling") #インストールが必要なら実行 
@@ -299,16 +259,101 @@ library(cifmodeling)
 set.seed(46)
 dat <- generate_data(hr1=2, hr2=1.5) #再発ハザード比2, 死亡ハザード比1.5のデータ生成
 
+cifplot(Event(time_os, status_os) ~ stoma,
+  data         = dat,
+  outcome.type = "survival",
+  label.y      = "Overall survival"
+)
+```
+:::
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「わからん。数式はわからん」
+:::
+
+::: voice-father
+お父さん「そう？数学の難しさ自体は高校レベルなんだけど。きっと理解しにくいのは、数式がデータ上のどういう概念を結びつけているのかっていう部分なんだだと思うんだけど。そこは慣れるしかないなあ。次にハザード比」
+:::
+::::::::::::::::::::::::::::::::: 
+
+
+::: {.callout-note title="リスクとハザード比の関係"}
+
+群1と群2のアウトカムを比較する状況を考えましょう。群1の時点*x*の疾患リスクを$\pi_1$、群2の時点*x*の疾患リスクを$\pi_2$とします。さらに、それぞれの群のハザードを$\lambda_1$と$\lambda_2$、生存時間中央値を$M_1$と$M_2$とします。
+
+上で述べた関係式を適用すると、指数分布の下で、ハザード比は以下のように表現することができます。
+
+-   ハザード比（指数分布を仮定）
+
+    $HR=\frac{\lambda_1}{\lambda_2}=\frac{M_2}{M_1}=\frac{\mathrm{log}(\pi_1)}{\mathrm{log}(\pi_2)}$
+
+指数分布では、ハザードは時間を通じて一定でした。その一方で、Cox比例ハザードモデルでは、ハザードを時間の関数$\lambda_1(x)$と$\lambda_2(x)$と考え、しかも両者が比例関係にあると仮定します。
+
+-   ハザード比（比例ハザード性を仮定）
+
+    $HR=\frac{\lambda_1(x)}{\lambda_2(x)}$
+:::
+
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
+お父さん「はっきりいうとね、ハザードが直感的にわかる研究者の方が少ないよ。だから安心していい」
+:::
+
+::: voice-daughter
+娘「え、そうなの？なんか“知らないといけない基本”みたいに思って焦った」
+:::
+
+::: voice-father
+お父さん「ハザードはね、患者さんの健康状態を表す“見えない時計”だと思うといい。」
+:::
+
+::: voice-daughter
+娘「見えない時計？」
+:::
+
+::: voice-father
+お父さん「治療Aを受けた患者は、ちょっと速く進む時計を持っている。治療B群の人は、少し遅い時計を持っている。ハザード比は、その2つの時計が“どれくらい違う速さで動くか”の比なんだ」
+:::
+
+::: voice-daughter
+娘「なるほど、時間が進むスピードの違いなら、イメージしやすいかも」
+:::
+
+::: voice-father
+お父さん「ただし、ここが重要。時計の進み方は、必ずしも一定とは限らない。最初は治療Bが有利でも、途中から追いつかれることだってある」
+:::
+
+::: voice-daughter
+娘「それ、実際の患者さんでもあるかも！」
+:::
+
+::: voice-father
+お父さん「それなのに多くの論文で“ハザード比＝一定”という前提で解析する。Cox回帰が標準的に使われるからね。だから、比例ハザード性が破綻すると、ハザード比の解釈が急に怪しくなる」
+:::
+
+
+::: {.callout-note title="シミュレーションデータにおける時点ごとのリスク比の推定"}
+
+
+さっきの「見えない時計」をデータで眺めてみましょう。以前と同じ、ストーマ造設の有無で死亡のハザードが異なる生存時間データをシミュレーションし、**時点ごとのリスク比（RR）** を推定してみます。**ハザード比**は「時計の速さの比」でしたが、「術後10年時点の死亡リスクは、ストーマあり群が何倍か」のようにリスク比の方が、解釈しやすいこともあります。Cox回帰では時点を通じて1つのハザード比を仮定するのに対して、`cifmodeling`の`polyreg()`では、時点を通じて一定のリスク比だけでなく、任意の時点tごとのリスク比も推定できます。
+
+先ほどのシミュレーションデータを使って、`time.point`を変えた`polyreg()`を当てはめることで、術後5年・10年・20年時点の死亡リスク比を推定します。アウトカム（OS）は`Event(time_os,status_os)`、曝露変数であるストーマの有無は`exposure="stoma"`で指定しています。
+
+```{r warning=FALSE}
+rr_at_5 <- polyreg(nuisance.model=Event(time_os,status_os)~1, exposure="stoma", data=dat, 
+                    effect.measure1="RR", time.point=5, outcome.type="survival")
+summary(rr_at_5)
 rr_at_10 <- polyreg(nuisance.model=Event(time_os,status_os)~1, exposure="stoma", data=dat, 
                     effect.measure1="RR", time.point=10, outcome.type="survival")
 summary(rr_at_10)
 rr_at_20 <- polyreg(nuisance.model=Event(time_os,status_os)~1, exposure="stoma", data=dat, 
-                    effect.measure1="RR", time.point=10, outcome.type="survival")
+                    effect.measure1="RR", time.point=20, outcome.type="survival")
 summary(rr_at_20)
-rr_at_30 <- polyreg(nuisance.model=Event(time_os,status_os)~1, exposure="stoma", data=dat, 
-                    effect.measure1="RR", time.point=10, outcome.type="survival")
-summary(rr_at_30)
 ```
+
+ハザード比は一定の下でデータを生成していますが、時間が経つにつれリスク比は小さく推定されることがわかります。冒頭のKaplan-Meier曲線もあわせてみてみてください。
 :::
 ::::::::::::::::::::::::::::::::: 
 
