--- a/jp/study-design-3.qmd
+++ b/jp/study-design-3.qmd
@@ -152,15 +152,15 @@ a:hover {
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「さっきのアウトカムについてなんだけどね。ジャーナルクラブで臨床試験の論文を読むと出てくる”OS”とか”DFS”とかの略語もアウトカムだよね？実はよくわからないんだけど、当たり前のように使われているから質問しにくいんだ。DFSはがんの再発を調べてるみたいなんだけど。お父さん詳しい？」
+私「さっきのアウトカムについてなんだけどね。ジャーナルクラブで臨床試験の論文を読むと出てくる”DFS”とか”RFS”とかの略語もアウトカムだよね？実はよくわからないんだけど、当たり前のように使われているから質問しにくいんだ。DFSとRFS、どっちもがんの再発を調べてるみたいなんだけど。お父さん詳しい？」
 :::
 
 ::: voice-father
-お父さん「統計解析をしていて、OSとDFSを扱うことはあるよ。OSは全生存期間（overall survival）、DFSは無病生存期間（disease-free survival）のことだよね」
+お父さん「もちろん統計解析でDFSを扱うことはあるよ。一番よく出てくるOSは全生存期間（overall survival）だよね。DFSは無病生存期間（disease-free survival）、RFSは無再発生存期間（relapse-free survival）のこと」
 :::
 
 ::: voice-daughter
-私「無病生存期間って再発までの日数のこと？」
+私「無再発生存期間って再発までの日数のこと？」
 :::
 
 ::: voice-father
@@ -168,14 +168,12 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「同じじゃないの？」
+私「よけいにわからん。ぜんぶ同じじゃないの？」
 :::
 
 ::: voice-father
-お父さん「専門的には違うよ。再発を経験せずに、死亡することもあるでしょ。無病生存期間のポイントは、再発・2次がん・死亡のうち、**どれか最初のイベントまでの時間**を扱うこと。だから、再発だけでなく、死亡したり別のがんを発症したりしたときも、イベントとして扱われるんだ」
+お父さん「生存間解析ではね、細かいけど違うんだ。再発を経験せずに、死亡することもあるでしょ。無病生存期間のポイントは、再発・2次がん・死亡のうち、**どれか最初のイベントまでの時間**を扱うこと。だから、再発だけでなく、死亡したり別のがんを発症したりしたときも、イベントとして扱われるんだ」
 :::
-
-![](study-design-2.png)
 
 ::: voice-daughter
 私「イベント扱いって？」
@@ -190,7 +188,30 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「薬の臨床試験で用いられるアウトカムは、”エンドポイント”とよばれることもあるね。表に、がん臨床試験の主な生存時間エンドポイントを整理してあげるよ（Japan Clinical Oncology Group 2021）」
+お父さん「RFSでは、イベントは死亡と再発のするのが普通。つまり二次がんはイベントに含めない。無再発期間だったらイベントは再発だけ。図をみたら、イメージしやすくなるかな」
+:::
+
+
+![](study-design-2.png)
+
+::: voice-father
+お父さん「一般に、生存時間データは、特定のイベントまでの経過時間なんだ。端的にいうとね、無病生存期間のデータから“3年無病生存確率”を計算するとするでしょ。それは“イベントが起こらない確率”に相当するんだけど、意味合いとしては3年時点で、再発も2次がんも経験せず、生存できる確率を求めることになる」
+:::
+
+::: voice-daughter
+私「納得。私はね、無病生存期間の結果が重要だと思うな。再発と2次がん、どっちも起きない方がいい。無再発期間はあまり解析する意味を感じないな。死亡は一番重要なイベントじゃない？」
+:::
+
+::: voice-father
+お父さん「そうだね。でも、がんが再発した後に死亡した患者は、無再発期間だったとしてもイベント扱いになるよね」
+:::
+
+::: voice-daughter
+私「確かにね。再発前に亡くなるケースって、感染症とか、交通事故とか、原病に関係ないかもしれない」
+:::
+
+::: voice-father
+お父さん「薬の臨床試験で用いられるアウトカムは、”エンドポイント”とよばれることもあるけど、実際には研究ごとに様々なエンドポイントが用いられる。表に、がん臨床試験の主な生存時間エンドポイントを整理してあげるよ（Japan Clinical Oncology Group 2021）」
 :::
 
 | エンドポイント | イベント1 | イベント2 | イベント3 | イベント4 | 打ち切り日 |
@@ -198,6 +219,7 @@ a:hover {
 | 全生存期間 | 死亡 |  |  |  | 最終生存確認日 |
 | 無増悪生存期間 | 死亡 | 増悪/再発 |  |  | 最終無増悪確認日 |
 | 無再発生存期間 | 死亡 | 再発 |  |  | 最終生存確認日 |
+| 無再発期間 | 再発 |  |  | | 最終生存確認日 |
 | 無病生存期間 | 死亡 | 再発 | 2次がん |  | 最終生存確認日 |
 | 無イベント生存期間 | 死亡 | 寛解導入失敗 | 再発 | 2次がん | 最終生存確認日 |
 | 治療成功期間 | 死亡 | 治療中止（治療中の増悪/再発を含む） | プロトコール治療完了後の増悪/再発 |  | 最終治療継続確認日または最終無増悪確認日 |
@@ -211,11 +233,15 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「時間原点についてもう少し説明してよ」
+私「時間原点ってはじめて聞いた。もう少し説明してよ」
 :::
 
 ::: voice-father
 お父さん「じゃあ、生存時間の原点について、典型的な決め方をいくつか紹介しようか。まず、DFSは根治手術後の再発状況を調べるため用いられるアウトカムだよね。だから、”手術日”がこの場合の時間原点の候補になる。手術日のように治療の起点がはっきりしている状況だと決めやすいよね。一方で、もし”退院日”を時間原点にすると、手術直後の死亡が評価対象にならなくなっちゃうから、研究によってはそこを批判されるかもしれない。もうひとつ典型的な決め方を挙げると、臨床試験の登録日があるかな。ランダム化臨床試験だと、登録日に治療をランダムに割付けるから、それを原点にして生存曲線を描くのが自然だよね」
+:::
+
+::: voice-daughter
+私「観察のスタート時点のことね、たしかに大切。実は今、調査票作ってて、DFSとかOSを正確に知りたかったんだ。聞いてよかった、また相談するね」
 :::
 :::::::::::::::::::::::::::::::::
 
@@ -326,6 +352,7 @@ cifplot(Event(time_cir, status_cir) ~ stoma,
 ```
 :::
 
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
 私「Aalen-Johansen曲線って、Kaplan–Meier曲線のY軸を逆さにしただけじゃないの」
 :::
@@ -340,8 +367,9 @@ cifplot(Event(time_cir, status_cir) ~ stoma,
 :::
 
 ::: voice-father
-お父さん「もちろん間違いじゃないよ。でも、RFS曲線の差は、再発だけでなく他因死の影響も反映しているよね。だからOS、RFS、CIRは使い分けることが必要になる」
+お父さん「もちろん間違いじゃないよ。でも、RFS曲線の差は、再発だけでなく他因死の影響も反映しているよね。だから、さっきいったみたいに、OS、RFS、CIRは使い分けが必要になる」
 :::
+::::::::::::::::::::::::::::::::: 
 
 
 ::: {.callout-note title="臨床エンドポイントと代替エンドポイント"}
