--- a/jp/study-design-4.qmd
+++ b/jp/study-design-4.qmd
@@ -152,7 +152,7 @@ a:hover {
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「聞いていいかな、お父さん。がんサバイバーの復職率を調査する話があったでしょ。患者さんに送る調査票をつくってみたんだけど、見てくれる？」
+私「今、話しかけていいかな、お父さん。がんサバイバーの復職率を調査する話があったでしょ。患者さんに送る調査票をつくってみたんだけど、見てくれる？」
 :::
 
 ::: voice-father
@@ -246,11 +246,11 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「うんうん。じゃあ生存時間データはなんだっけ？OS（全生存期間）ってこと？」
+私「うんうん。じゃあ生存時間データはなんだっけ？OSってこと？」
 :::
 
 ::: voice-father
-お父さん「たしかにOSは生存時間データの一種だよ。名前から誤解されがちだけど、それ以外にもあるんだ。生存時間データがどういうものかっていうと、時間原点から“イベント”までにかかった時間を表す変数のこと」
+お父さん「たしかに全生存期間（OS）は生存時間データの一種だよ。名前から誤解されがちだけど、それ以外にもあるんだ。生存時間データがどういうものかっていうと、時間原点から“イベント”までにかかった時間を表す変数のこと」
 :::
 
 ::: voice-daughter
