--- a/jp/study-design-5.qmd
+++ b/jp/study-design-5.qmd
@@ -206,7 +206,7 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「それはわかるよ。死亡率を調査するって大変だもの」
+私「それはわかるよ。死亡調査って大変だもの」
 :::
 
 ::: voice-father
@@ -214,7 +214,7 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「私の調査で、それ以外に気をつけておいた方がいいバイアスってある？」
+私「わかるけどね、死亡が特定できないのはどうしようもないときだもの。ベストを尽くすしかないよね。私の調査で、それ以外に気をつけておいた方がいいバイアスってある？」
 :::
 
 ::: voice-father
@@ -226,7 +226,7 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「経済状況のようなナイーブな質問内容には十分配慮した方がいいよ。それが理由で回答してくれないと、解析対象集団が調査対象全体を代表していると言えなくなってしまう。他にはね、ストーマ非保有者よりストーマ保有者の方が、調査票への回答率が高くなっちゃうとか。そもそもストーマ非保有者とストーマ保有者の回答率に差があると、これらの集団を比較してもバイアスがあるって批判されるかもしれない」
+お父さん「経済状況のようなナイーブな質問内容には十分配慮した方がいいよ。それが理由で回答してくれないと、解析対象集団が調査対象全体を代表しているといえなくなってしまう。他にはね、ストーマ非保有者よりストーマ保有者の方が、調査票への回答率が高くなっちゃうとか。そもそもストーマ非保有者とストーマ保有者の回答率に差があると、これらの集団を比較してもバイアスがあるって批判されるかもしれない」
 :::
 
 ::: voice-daughter
@@ -234,7 +234,7 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「交絡もバイアスの一種だけど、違う。これは母集団からのサンプル抽出に影響する”選択バイアス”といって区別されるんだ。それに、年収って尋ねられると、過大申告してしまいがちだよね。このように集めた情報自体に偏りがあることを、”情報バイアス”と呼んでいる。調査方法について授業するときは、選択バイアス、情報バイアス、交絡の3つに気をつけなさいって教えるようにしている。一部の対象者ばかり選ばれないようにしなさい、情報を集めるときはバイアスが入らないように配慮しなさい、集団を比較するときは、比較したい要因以外の特徴を揃えるようにしなさいってね」
+お父さん「交絡ってどこで聞いたの？よく知ってるね。あれもバイアスの一種だけど、今回のとは違う。回答率の差やなにか理由があって回答してくれない場合は、母集団からのサンプル抽出に影響する”選択バイアス”といって、区別されるんだ。それに、年収って尋ねられると、過大申告してしまいがちだよね。このように集めた情報自体に偏りがあることを、”情報バイアス”と呼んでいる。調査方法について授業するときは、選択バイアス、情報バイアス、交絡の3つに気をつけなさいって教えるようにしている。一部の対象者ばかり選ばれないようにしなさい、情報を集めるときはバイアスが入らないように配慮しなさい、集団を比較するときは、比較したい要因以外の特徴を揃えるようにしなさいってね」
 :::
 
 ::: voice-daughter
