--- a/jp/study-design-5.qmd
+++ b/jp/study-design-5.qmd
@@ -238,7 +238,7 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「ふーん？選択バイアス、情報バイアスねえ？やっぱり臨床研究って言葉遣いがよくわかんないな。まあいっか」**
+私「ふーん？選択バイアス、情報バイアスねえ？やっぱり臨床研究って言葉遣いがよくわかんないな。でも、自分の調査で失敗したくないから、メモしておくよ」
 :::
 
 ::: callout-note
