--- a/jp/study-design-5.qmd
+++ b/jp/study-design-5.qmd
@@ -149,6 +149,7 @@ a:hover {
 
 ### 調査で気をつけておくべきバイアス
 
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
 私「ただいまーつかれたー。お父さん、甘いものない？」
 :::
@@ -240,11 +241,14 @@ a:hover {
 ::: voice-daughter
 私「ふーん？選択バイアス、情報バイアスねえ？やっぱり臨床研究って言葉遣いがよくわかんないな。でも、自分の調査で失敗したくないから、メモしておくよ」
 :::
+::::::::::::::::::::::::::::::::: 
 
-::: callout-note
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **ランダム誤差とバイアス**
+
+::: {.callout-note title="ランダム誤差とバイアス"}
 
 統計学は誤差を扱う学問ですが、臨床研究ではランダム誤差（random error）とバイアス（bias）を区別することが大切です。ランダム誤差は、基本的にはゼロを中心としたばらつきを想定しています。一方で、得られた推定値が真の値から系統的にずれていることを、バイアスといいます。臨床研究における統計学の目標は、ランダム誤差を制御し、バイアスを可能な限りゼロに近づけることです。
+
+たとえるなら、ランダム誤差は的の中心を狙って矢を放つときのばらつき、バイアスは狙いが中心からずれている状態といえます。ランダム誤差は適切な統計手法を用いたり、サンプルサイズを大きくすることで減少させることができますが、バイアスは研究デザインやデータ収集方法を工夫しないと、解消できません。これが"Study design"シリーズの最後のテーマでした。
 
 ![](study-design-5.png)
 :::
