--- a/jp/epidemiology-12.qmd
+++ b/jp/epidemiology-12.qmd
@@ -147,7 +147,7 @@ a:hover {
 
 ------------------------------------------------------------------------
 
-### 98%って聞いたら100人いたら98人に効くって思わない？
+### 98%って100人いたら98人に効くって思わない？
 
 ::: {.callout-note collapse="true" title="前回までのあらすじ"}
 はじめて研究に取り組む娘と統計家の父。父に研究仮説は"PICO"を"PECO"で整理するといいとアドバイスされ、医師である娘は、がんサバイバーにおけるストーマ造設と復職状況の関係を調査することに決める。それからというもの、父は娘に統計の話をふるチャンスをうかがっていた。
@@ -175,9 +175,8 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「違う違う。プラセボの効果との相対比較。プラセボを打ったときに比べ、どのくらい感染を予防できるっていう意味のパーセントなんだ。論文ではともかく日常会話ではほとんど誤解されて伝わっちゃう。"リスク"までさかのぼらないと、わからないと思うね」
+お父さん「違う違う。プラセボの効果に比べて、どのくらい感染を予防できるっていう意味のパーセントなんだ。論文ではともかく日常会話では誤解されやすい言葉だよね」
 :::
-
 ::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note title="リスクを比較するための基本的な指標"}
@@ -206,10 +205,6 @@ a:hover {
 -   ワクチン有効率（vaccine efficacy、相対リスク減少）
     $VF=\frac{\pi_2-\pi_1}{\pi_2}=1-RR$
 :::
-
-
-
-
 
 ::: {.callout-note title="寄与割合とその関連指標"}
 疫学研究では、一般集団を対象にして、環境物質や生活習慣といったリスク因子を調べることが多く、そのために寄与割合（attributable fraction）という別の指標も用いられます。寄与割合は、特定の集団におけるリスク因子への曝露が、どのくらい疾患発症に寄与するかを表す指標です。ただし、寄与割合には、歴史的に異なる呼ばれ方をしており、どのような集団をターゲットとするかで定義も変わるので、正確に扱うべきです。
