--- a/jp/clinical-trial-4.qmd
+++ b/jp/clinical-trial-4.qmd
@@ -199,16 +199,25 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「じゃあ、話はそこからだね」
+お父さん「じゃあ、話はそこからだね。ちょっとそこのナプキンとペンをとって」
 :::
+
+::: voice-daughter
+私「ん？これのこと？」
+:::
+
+::: voice-father
+お父さん「ありがとう。αエラー・βエラーは、表にしないと説明できないからね」
+:::
+
+
 :::::::::::::::::::::::::::::::::
 
-::: {.callout-note}
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **αエラーとβエラー**
+::: {.callout-note title="αエラーとβエラー"}
 
 これまで、臨床試験JCOG9502（Sasako, et al. 2006）の文脈に沿って、片側p値と両側p値の違いも交えながら、p値について解説してきました。しかし本質的に重要なのは、p値を用いた判断に、どのような合理性があるのか、ということです。
 
-JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群はTH群に比べ全生存期間を延長する効果がある」と「効果がない」の2通りがあるといいました。一方で、試験の結果もp\<0.05とp≥0.05の2通りです。これらを組み合わせは2×2の4通りがあります。
+JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群はTH群に比べ全生存期間を延長する効果がある」と「効果がない」の2通りがあるといいました。一方で、試験の結果も$p<0.05$と$p≥0.05$の2通りです。これらを組み合わせは2×2の4通りがあります。
 
 このうち、臨床試験の結果から判断を誤ってしまうケースは2つです。つまり、効果があるのにp≥0.05になってしまうケースと、効果がないのに（帰無仮説が正しいのに）p\<0.05になってしまうケースです。仮説検定では、前者をαエラー（alpha error）、後者をβエラー（beta error）と呼んでいます。また、βエラーを1から引いたものを検出力（power）と呼んでいます。
 
@@ -216,6 +225,19 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 |----|----|----|
 | 有意差なし（p値≥有意水準） |  | βエラー |
 | 有意差あり（p値\<有意水準） | αエラー | 検出力=1-β |
+:::
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「まあ当たり前だよね。治療効果がないのに、有意に効いたって論文を書くのも間違いだし、治療効果があるのに、有意にならないのも研究失敗だし」
+:::
+
+::: voice-father
+お父さん「そうだね。でも、正確にいうと、αエラー・βエラーは"統計学的に有意"とかp値とかとは、直接関係する概念じゃない。別に、効果があるかどうか判定する基準は、p値じゃなくてもいいわけだからね。ポイントはね、p\<0.05は、αエラーだけをコントロールする基準だってこと」
+:::
+:::::::::::::::::::::::::::::::::
+
+::: {.callout-note title="αエラー、βエラー、p値"}
 
 αエラーとβエラーが生じる確率を考えてみましょう。理論的に考えると、サンプルサイズが大きくなるほど、ランダム誤差は小さくなります。αエラーとβエラーも同じで、サンプルサイズが大きいほど小さくなる（判断を誤りにくくなる）性質があります。しかし、2つのエラーはトレードオフの関係にあります。サンプルサイズが一定だと、両方同時に小さくすることはできません。そこで通常は、αエラーを優先して、事前に決めた水準よりも小さく保たれるような判定方式を用います。これが仮説検定であり、事前に決めた水準のことを有意水準と呼びます。実は、p\<0.05で判定することと有意水準を5%と設定することは、同じ意味です。
 
