--- a/jp/clinical-trial-1.qmd
+++ b/jp/clinical-trial-1.qmd
@@ -153,9 +153,9 @@ a:hover {
 
 ### 生存曲線まわりの数値を読み解く
 
--   前回までのあらすじ
-
-    はじめて研究に取り組む娘と統計家の父。父に研究仮説は"PICO"を"PECO"で整理するといいとアドバイスされ、医師である娘は、がんサバイバーにおけるストーマ造設と復職状況の関係を調査することに決める。おなじ復職状況でも、2値データと生存時間データの2通り解析の仕方があると教えられた娘。むかし読んだ論文で、OS・DFSという用語が出てきたことを思い出すのだった。
+::: {.callout-note collapse="true" title="前回までのあらすじ"}
+はじめて研究に取り組む娘と統計家の父。父に研究仮説は"PICO"を"PECO"で整理するといいとアドバイスされ、医師である娘は、がんサバイバーにおけるストーマ造設と復職状況の関係を調査することに決める。おなじ復職状況でも、2値データと生存時間データの2通り解析の仕方があると教えられた娘。上司に読むことを勧められた論文で、OS・DFSという用語が出てきたことを思い出すのだった。
+:::
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
