--- a/jp/epidemiology-1.qmd
+++ b/jp/epidemiology-1.qmd
@@ -175,7 +175,7 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「違う違う。プラセボの効果との相対比較。プラセボを打ったときに比べ、どのくらい感染を予防できるっていう意味のパーセントなんだ。論文ではともかく日常会話ではほとんど誤解されて伝わっちゃう。"リスク"までさかのぼらないと、わからないと思うね」
+お父さん「違う違う。プラセボの効果との相対比較。プラセボを打ったときに比べ、どのくらい感染を予防できるっていう意味のパーセントなんだ。論文ではともかく日常会話ではほとんど誤解されて伝わっちゃう。"リスク"までさかのぼらないと、わからないと思う。ちょっとナプキンとペンとって。式で書きたい」
 :::
 
 ::::::::::::::::::::::::::::::::: 
@@ -197,7 +197,7 @@ a:hover {
 :::
 
 ::: {.callout-note title="治療後のリスクを比較するための指標"}
-特に、2種類の治療のどちらが有効か評価する状況では、以下の指標もよく用いられます。どちらの指標でも$\pi_2>\pi_1$と想定されています。ワクチン有効率では、群2はプラセボ群です。
+特に、2種類の治療のどちらが有効か評価する状況では、以下の指標もよく用いられます。どちらの指標でも$\pi_2>\pi_1$と想定されています。ワクチン有効率では、群2はプラセボを受けていると考えてください。
 
 -   Number needed to treat（NNT）
 
@@ -207,51 +207,9 @@ a:hover {
     $VF=\frac{\pi_2-\pi_1}{\pi_2}=1-RR$
 :::
 
-
-
-
-
-::: {.callout-note title="寄与割合とその関連指標"}
-疫学研究では、一般集団を対象にして、環境物質や生活習慣といったリスク因子を調べることが多く、そのために寄与割合（attributable fraction）という別の指標も用いられます。寄与割合は、特定の集団におけるリスク因子への曝露が、どのくらい疾患発症に寄与するかを表す指標です。ただし、寄与割合には、歴史的に異なる呼ばれ方をしており、どのような集団をターゲットとするかで定義も変わるので、正確に扱うべきです。
-
-曝露がリスク因子として働くときに用いられる指標として、多くの疫学の教科書で説明されているのは、以下の定義によるものです。この指標では、群1が曝露あり、群2が曝露なしと考えています。そして、群1から曝露を取り除いたとき、どのくらい疾患が減るかを表しています。
-
--   Excess fraction（またはrisk fraction）
-
-    $EF=\frac{\pi_1-\pi_2}{\pi_1}=1-\frac{1}{RR}$
-
-一方で、たとえば喫煙に対する禁煙のように、曝露が予防的に作用するとき、以下の指標が用いられます。群1が曝露あり、群2が曝露なしという点は同じですが、ターゲットは群2です。なお、この式はワクチン有効率と同じです。
-
--   Preventable fraction
-
-    $PF=\frac{\pi_2-\pi_1}{\pi_2}=1-RR$
-
-| 指標 | 分母（ターゲット集団） | 何を表す？ | いつ使う？ |
-|------|------|---------------------------|-------------|------------|
-| Excess fraction（寄与割合） | **曝露者だけ**（E=1） | 曝露集団のうち、どれだけの割合が曝露のため疾患を生じたか | 喫煙、飲酒、化学物質などの有害曝露の個人への影響を知りたいとき |
-| Preventable fraction（予防寄与割合） | **曝露者だけ**（E=1） | 曝露集団のうち、どれだけ予防的な曝露が疾患を防いだか | ワクチン・検診・運動などの予防法が、個人のリスクをどれだけ下げたか知りたいとき |
-| Population attributable fraction（集団寄与割合） | **全員**（集団全体） | 集団全体の疾患のうち、どれだけがその曝露のため生じているか | 公衆衛生・医療政策で、曝露をなくせば集団でどれだけ減るかを評価するとき |
-
-**数値例**
-
-いくつかの指標の数値例を示しておきましょう。この表は、 曝露と膵がんリスクの関係を調べる仮想的なコホート研究から得られたデータを表しています。上の式を用いて、リスク差、リスク比、オッズ比、excess fractionを求めると、以下のような結果が得られます。ワクチン有効率と同じように、excess fractionもパーセントで示すことがあるため、要注意です。
-
-|                   | 曝露あり | 曝露なし | 効果の指標 |
-|-------------------|----------|----------|------------|
-| 合計              |          |          |            |
-| 　膵がんあり      | 15       | 12       |            |
-| 　膵がんなし      | 365      | 868      |            |
-| 　リスク          | 3.9%     | 1.4%     |            |
-| 　リスク差        |          |          | 2.5%       |
-| 　リスク比        |          |          | 3倍        |
-| 　オッズ比        |          |          | 3倍        |
-| 　Excess fraction |          |          | 74%        |
-
-:::
-
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「へー、確かにパーセントっていわれるとただの割合と思いがちだよね。お父さんって、頭の中にいつもこんな計算式があるの？いきなり式が出てくると違和感あるなあ。統計学と医学ってだいぶ雰囲気が違うね」
+私「へー、ワクチン有効率はイメージしてたパーセントじゃないね。でも、確かにパーセントが単位だとただの割合と思いがちだよね。お父さんって、頭の中にいつもこんな計算式があるの？いきなり式が出てくると違和感あるなあ。統計学と医学ってだいぶ雰囲気が違うね」
 :::
 
 ::: voice-father
@@ -259,124 +217,40 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「確かにね。数字だけみると、レトリックに騙されちゃいそう。Excess fractionなんて、パーセントがなにを意味するのか謎」
+私「確かにね。98%有効っていう数字だけみると、”ほぼ確実に救える”って意味に捉えがちだけど、よく考えたらワクチンにそこまでの効果はないよね。統計を使ったレトリックに騙されちゃいそう」
 :::
 
 ::: voice-father
-お父さん「そっか、そうだよね。あのね、疾患リスクで考えるから混乱しがちなのかもしれない。たとえ話をさせてよ。60歳になってがん検診にきた人が4人いたとする。話をわかりやすくするために、4人の健康状態はまったく同じだとしよう。そのうち、最初の2人はがん検診が陽性で、根治切除できたとする。その後、71歳と79歳まで生きることができた。つまり、がん検診後の生存期間は11年と19年」
+お父さん「そう。でも日常会話でそんなこと気にしてられないでしょ。だから誤解が多い。パーセント表記が逆に誤解を生んでる疫学の指標は、他にもあるよ」
 :::
 
-::: voice-daughter
-私「ふんふん」
-:::
-
-::: voice-father
-お父さん「残りの2人は、本当はがんだったのに、検診では見つけられなかった。そのため、67歳と73歳で亡くなった。つまり、がん検診後の生存期間は7年と13年。じゃあ、仮にこの2人を60歳のとき根治切除できたとしたら、生存期間は何割長くなるだろう」
-:::
-
-::: voice-daughter
-私「えっと、がん検診陽性の2人の生存期間は平均15年でしょ。がん検診陰性の2人の生存期間は平均10年。だから、(15-10)/10=0.5だから、50%の延長」**
-:::
-
-::: voice-father
-お父さん「じゃあ、別の質問をするよ。もし、がん検診陽性の2人を60歳のとき根治切除できなかったとしたら、生存期間はどれくらい失われる？」
-:::
-
-::: voice-daughter
-私「(10-15)/15=-0.33だから、33%減っちゃうね」
-:::
-
-::: voice-father
-お父さん「そう。つまり、陽性2人と陰性2人のどちらをターゲットにするかで、データは同じでも、根治切除の生存期間に寄与する割合が変わってくる。ここが寄与割合の複雑なところなんだ。さっきのexcess fractionは、この例でいうと根治切除できなかった2人をターゲットと考えている。Preventable fractionのターゲットは、根治切除できた2人に対応している」
-:::
-
-::: voice-daughter
-私「なるほど、ターゲット集団を分母にとるのね。ターゲットがあるのが、リスク差とかリスク比とかとの違いってわけだ」
-:::
-
-::: voice-father
-お父さん「いや？効果の指標にはどれも、表に出ないだけでターゲット集団がある。たとえば術後の大腸がん患者を対象にランダム化臨床試験をして、補助化学療法をすると死亡リスク差が-5%になったとするでしょ。これって、術後の大腸がん患者全体に補助化学療法をすべきって解釈にならない？」
-:::
-
-::: voice-daughter
-私「まあねえ」
-:::
-
-::: voice-father
-お父さん「つまり臨床試験の集団全体がターゲット集団になる。因果リスク差とか、因果リスク比っていう言葉があるんだけど、これは集団全体に別の治療をしたときや、集団全体がリスク因子に曝露したとき、リスクがどう変化するかを表してるんだ」
-:::
-
-::: voice-daughter
-私「ふーん。じゃあワクチン有効率はどうなの？」
-:::
-
-::: voice-father
-お父さん「ワクチン有効率も臨床試験で推定するよね。だからそのワクチンのターゲット全体が、ワクチンを接種したとき、それがプラセボだったときに比べ、何割感染症が減るかっていう解釈になる。現場では、既存のワクチンが普及していることがほとんどでしょ。そこにワクチン有効率98%の新しいワクチンを投入しても、感染症が98%減ることにはならない」
-:::
-::::::::::::::::::::::::::::::::: 
-
-::: {.callout-note title="ターゲット集団"}
-治療や曝露とアウトカムの因果関係を扱うときには、どのような集団を考えているかをはっきりさせる必要があります。一例として、根治切除後の直腸がん患者におけるストーマ造設の有無と復職率との因果関係を考えてみましょう。このときストーマ保有者と非保有者を比較する因果リスク差は、「根治切除後の直腸がん患者全体」をターゲット集団としています。ストーマ保有者と非保有者という別の集団を比べているのに、患者全体がターゲットというのは奇妙にみえるかもしれません。しかし因果推論では、「患者全体がストーマを造設したとき」と「患者全体がストーマを造設しなかったとき」という仮想的な状況を対比することで、ストーマ造設が復職率を低下させたかがわかる、という反事実の考え方をするのです。
-:::
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-father
-お父さん「もうひとつ気を付けないといけないのは、リスクには時間の概念が隠れていること。検診後10年時点の死亡確率を考えてみよう。陽性2人の死亡確率は0%、陰性2人の死亡確率50%だよね。このときのexcess fractionはわかる？」
-:::
-
-::: voice-daughter
-私「うん。(0.5-0)/0.5=1でしょ」
-:::
-
-::: voice-father
-お父さん「そう、つまり根治切除していれば、がん陰性の2人の死亡は100%防げたという意味になる。でもさ、がん検診後、12年経つとどうなる？」
-:::
-
-::: voice-daughter
-私「(0.5-0.5)/0.5=0になるね」
-:::
-
-::: voice-father
-お父さん「じゃあ、がん検診後、20年経つと？」
-:::
-
-::: voice-daughter
-私「生存者はいなくなるね。(1-1)/1=0かな」
-:::
-
-::: voice-father
-お父さん「そういうこと。寄与割合は、時間とともに変化することがあり得るんだ。時間が隠れているっていいうのは、リスク比やオッズ比も同じだけどね」
-:::
-
-::: voice-daughter
-私「なるほどね」
-:::
-
-::: voice-father
-お父さん「まとめるとね、"何%減る"とか"何%に効く"というパーセントを見たら、どの集団のことなのか、どの時点のリスクかを意識しよう、ということだね」
-:::
 ::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
-寄与割合は、excess fractionやpreventable fraction以外に、曝露・非曝露を合わせた集団全体をターゲットにすることもあります。先ほど用いたがん検診の例で考えましょう。仮にがん検診の感度が100%だったら、先ほどの状況（感度50%）に比べて、検診後15年後に死亡している人数は、どれくらい減ると期待されるでしょうか。
+次の表は、ワクチンとプラセボを比較した仮想的な臨床試験のデータです。表の人数からワクチン有効率を計算してみましょう。
 
-1.  0%
-2.  33%
-3.  50%
-4.  100%
+|          | ワクチン群 | プラセボ群 |
+|----------|------------|------------|
+| 発症あり |        10  |        200 |
+| 発症なし |       990  |        800 |
+
+1.  80%
+2.  90%
+3.  95%
+4.  99%
+
 :::
 
 ::: {.callout-note collapse="true" title="答えはこちら"}
--   **正解は3です**
 
-この4人の生存期間は、11年、19年、7年、13年なので、15年後の死亡数は3人です。また、根治切除後の死亡率は50%なので、根治切除後できなかった2人が、仮にがん検診でがんを見つけられて、根治切除できたとしたら、死亡率は50%と期待されます。この仮想的な状況における死亡数は、1+2×50%=2人です。つまり、検診後15年後に死亡している人数は33%減ったことになります。
+- **正解は3です**
 
-この計算は、集団全体をターゲットとする寄与割合（population attributable fraction）を求めていることに他なりません。集団全体における曝露割合を*p*で書くと、population attributable fractionは、以下の式で表されます。
+$\pi_1 = 10/1000 = 0.01$ 
 
-$PAF=\frac{p(RR-1)}{p(RR-1)+1}$
+$\pi_2 = 200/1000 = 0.2$ 
 
-がん検診の例では、*p*=0.5、15年死亡リスク比は*RR*=2なので、これを代入すると、*PAF*=0.5(2-1)/{0.5(2-1)+1}=0.33となり、上の正解と一致します。
+$VF=\frac{\pi_2-\pi_1}{\pi_2}=95%$
 :::
 
 ### Continuation of their story
