--- a/jp/epidemiology-12.qmd
+++ b/jp/epidemiology-12.qmd
@@ -147,64 +147,37 @@ a:hover {
 
 ------------------------------------------------------------------------
 
-### 98%って100人いたら98人に効くって思わない？
-
-::: {.callout-note collapse="true" title="前回までのあらすじ"}
-はじめて研究に取り組む娘と統計家の父。父に研究仮説は"PICO"を"PECO"で整理するといいとアドバイスされ、医師である娘は、がんサバイバーにおけるストーマ造設と復職状況の関係を調査することに決める。それからというもの、父は娘に統計の話をふるチャンスをうかがっていた。
-:::
+### 疾患リスクとターゲット集団
 
 ::::::::::::::::::::::::::::::::: dialogue
-::: voice-daughter
-私「コーヒー飲む？お父さん」
-:::
-
 ::: voice-father
-お父さん「ああ、ありがとう。おいしいね」
+お父さん「ワクチンとは別の話題なんだけど、喫煙歴のあるがんの患者さんって、減ったと思う？」
 :::
 
 ::: voice-daughter
-私「うん、ホットコーヒーあったまるよね。そういえばこの前出たワクチンってすごいね。有効率98%だって」
+私「そうね、昔よりは少なくなったんじゃない？」
 :::
 
 ::: voice-father
-お父さん「そうだね。でもさ、ワクチンの有効率って意外と計算が難しいんだよ。プラセボに比べてって意味だから」
+お父さん「でも、日本のがんの統計上は、まだまだ喫煙は健康問題のひとつなんだ。がん罹患のリスク要因は、感染症、喫煙、飲酒の順に影響が大きいと推定されている」
 :::
 
 ::: voice-daughter
-私「ん？100人いたら98人に効くって意味じゃないの？」
+私「喫煙率は下がってるのにちょっと意外だね。でもどのがん登録でも、喫煙情報は絶対調べるよね」
 :::
 
 ::: voice-father
-お父さん「違う違う。プラセボの効果に比べて、どのくらい感染を予防できるっていう意味のパーセントなんだ。論文ではともかく日常会話では誤解されやすい言葉だよね」
+お父さん「感染症、喫煙、飲酒が、がん罹患に寄与する割合は、16%、15%、6%っていわれてる。この指標を、集団寄与割合っていうんだけど、これもただのパーセントじゃない」
+:::
+
+::: voice-daughter
+私「それはそうだよね。喫煙者の15%ががんになる、なんて思わないもの。でも正確な意味はわかんないな」
+:::
+
+::: voice-father
+お父さん「ほら、喫煙者のがん罹患を真っ先にイメージしちゃうでしょ。そこも誤解ポイント。集団寄与割合が想定している集団は、喫煙者じゃないんだ」
 :::
 ::::::::::::::::::::::::::::::::: 
-
-::: {.callout-note title="リスクを比較するための基本的な指標"}
-医学では分野によってさまざまな指標が用いられており、特に割合を比較する指標にはわかりにくいものが少なくありません。群1で得られた疾患リスク（割合）を$\pi_1$、群2の疾患リスク（割合）を$\pi_2$とすると、2群を比較するために、以下のような指標が用いられます。なお、これらの指標を使うときは、どちらの群を基準に比較しているかを意識することが大切です。ここでは群2を基準にとっています。
-
--   リスク差（risk difference、絶対リスク減少）
-
-    $RD={\pi_1}-{\pi_2}$
-
--   リスク比（risk ratio）
-
-    $RR=\frac{\pi_1}{\pi_2}$
-
--   オッズ比（odds ratio）
-
-    $OR=\frac{\pi_1/(1-\pi_1)}{\pi_2/(1-\pi_2)}$
-:::
-
-::: {.callout-note title="治療後のリスクを比較するための指標"}
-特に、2種類の治療のどちらが有効か評価する状況では、以下の指標もよく用いられます。どちらの指標でも$\pi_2>\pi_1$と想定されています。ワクチン有効率では、群2はプラセボ群です。
-
--   Number needed to treat（NNT）
-
-    $NNT=\frac{1}{\pi_2-\pi_1}=-\frac{1}{RD}$
-
--   ワクチン有効率（vaccine efficacy、相対リスク減少）
-    $VF=\frac{\pi_2-\pi_1}{\pi_2}=1-RR$
-:::
 
 ::: {.callout-note title="寄与割合とその関連指標"}
 疫学研究では、一般集団を対象にして、環境物質や生活習慣といったリスク因子を調べることが多く、そのために寄与割合（attributable fraction）という別の指標も用いられます。寄与割合は、特定の集団におけるリスク因子への曝露が、どのくらい疾患発症に寄与するかを表す指標です。ただし、寄与割合には、歴史的に異なる呼ばれ方をしており、どのような集団をターゲットとするかで定義も変わるので、正確に扱うべきです。
@@ -246,15 +219,7 @@ a:hover {
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「へー、確かにパーセントっていわれるとただの割合と思いがちだよね。お父さんって、頭の中にいつもこんな計算式があるの？いきなり式が出てくると違和感あるなあ。統計学と医学ってだいぶ雰囲気が違うね」
-:::
-
-::: voice-father
-お父さん「もう慣れちゃったのかもね。でも、式で書かないと、ワクチン有効率がなんなのか、わからないでしょ」
-:::
-
-::: voice-daughter
-私「確かにね。数字だけみると、レトリックに騙されちゃいそう。Excess fractionなんて、パーセントがなにを意味するのか謎」
+私「これもワクチン有効率と同じだね。パーセントっていわれるとただの割合と思っちゃう。よく考えると、Excess fractionなんて、パーセントがなにを意味するのか謎」
 :::
 
 ::: voice-father
