--- a/jp/epidemiology-3.qmd
+++ b/jp/epidemiology-3.qmd
@@ -142,110 +142,236 @@ a:hover {
 # Story and Quiz − Epidemiology III
 
 ::: serif-block
-　　　　　　　　　　　　　　　　　　　　Keywords: binary data, risk- and effect-measures, paper writing
+　　　　　　　　　　　　　　　　　Keywords: binary data, risk- and effect-measures, survival/competing-risk, observational study, paper writing
 :::
 
 ------------------------------------------------------------------------
 
-### リスク比とオッズ比って同じだっけ
+### リスクと時間の関係
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「お父さんの話を聞いてて、国試の勉強してたときのことを思い出した。保健統計だったか、疫学だったかの問題で、リスク比とかオッズ比とか計算したなあ。リスク比とオッズ比って結局同じ？みたいな」**
+私「お父さんさ、さっき寄与割合を計算してるのをみてて思ったんだけどね。またわからないことがあるんだ」
 :::
 
 ::: voice-father
-お父さん「ああ、この前、膵がんの数値例で計算したとき、リスク比とオッズ比はどちらも3倍だったね。でも、これはたまたま。もっと正確にいうと、膵がんのようにリスクが低いと、リスク比とオッズ比は近い値になるんだ。ほら、リスク比とオッズ比の数式を見比べてよ。リスク比とオッズ比の違いって、$1-\pi_1$と$1-\pi_2$があるかどうかでしょ。リスクが低いと、ここがほとんど1になるから、リスク比とオッズ比の差がなくなる」
+お父さん「なに？」
 :::
 
 ::: voice-daughter
-私「まあ、私も論文読むとき別に区別してないけど」
+私「がん検診後、10年、12年、20年って見ていくと、寄与割合が変わるって話だったでしょ。リスクには時間の概念があるって。あれって、2値データじゃなくて生存時間データになってない？ていうか、あれは生存曲線か」
 :::
 
 ::: voice-father
-お父さん「えーっと、状況によってはそれはよくない。疾患や対象集団によっては、リスクが低いときばかりじゃないからね。最近の論文だと、オッズ比をリスク比の代わりに使うなら、そのままの値じゃなくて、オッズ比の平方根を報告した方がいいっていうものもある」
+お父さん「そうだよ。リスクと生存曲線は表裏一体なんだ」
 :::
 
 ::: voice-daughter
-私「なにそれ、またお作法が増えたの？」
+私「寄与割合とかリスク比とかって、時間とともに変化するっていうけど、ハザード比は変化しないんだっけ」
 :::
-::::::::::::::::::::::::::::::::: 
 
-::: {.callout-note title="リスク比はオッズ比の近似か"}
+::: voice-father
+お父さん「変化しない。正確にいうと、生存曲線をみると変化している状況もあり得るんだけど、無理やり時間を通じてハザード比は一定と仮定して、計算してる」
+:::
 
-表1は、2群の疾患リスク$\pi_1$と$\pi_2$の数値を0.1から0.9まで動かして、リスク比、オッズ比、オッズ比の平方根（square root of OR）を計算したものです。
+::: voice-daughter
+私「リスク比は変化するけどハザード比は変化しないの？ぴんとこないなあ」
+:::
 
-$RR=\frac{\pi_1}{\pi_2}$
+::: voice-father
+お父さん「えーっと、教科書通りに説明するとこうなるんだけど。まずはリスクとハザードからはじめるね」
+:::
+:::::::::::::::::::::::::::::::::
 
-$OR=\frac{\pi_1/(1-\pi_1)}{\pi_2/(1-\pi_2)}$
 
-$SOR=\sqrt{\frac{\pi_1/(1-\pi_1)}{\pi_2/(1-\pi_2)}}$
 
-$\pi_1$と$\pi_2$のどちらかが0.2を超えると、リスク比とオッズ比はまったく違う値になることがわかります。リスク比とオッズ比が1より小さいとき、オッズ比はリスク比より必ず小さくなります。また、$\pi_1$と$\pi_2$が0.2～0.7の範囲であれば、リスク比とオッズ比の平方根は、高々0.11しか違いません。
+::: {.callout-note title="生存曲線とハザードの関係"}
+Kaplan-Meier曲線もまた、割合の一種と考えることができますが、見え方がずいぶん違います。つまり、Kaplan-Meier曲線はグラフですし、時間の概念が含まれたりします。さらに、Kaplan-Meier曲線は、そもそも2値データではなく生存時間データに用いられる手法ですし、ハザード比との関係が重要です。ここでは、ハザードが時間を通じて一定という単純な状況で、そのあたりを整理しましょう。
 
-2群の疾患リスクを0.1から0.9まで動かしたときのリスク比、オッズ比、オッズ比の平方根
+Kaplan-Meier曲線は、生存時間データから計算された推定値を、時間軸（*x*軸）に沿ってグラフにしたものです。これを数式で書くなら、「生存曲線を時間*x*の関数*S*(*x*)で表す」ということになります。
 
-|     | 0.1  | 0.2 | 0.3 | 0.4 | 0.5 | 0.6 | 0.7 | 0.8 | 0.9 |
-|-----|------|-----|-----|-----|-----|-----|-----|-----|-----|
-| 0.1 | RR=1 | 0.50| 0.33| 0.25| 0.20| 0.17| 0.14| 0.13| 0.11|
-|     | OR=1 | 0.44| 0.25| 0.17| 0.11| 0.07| 0.05| 0.03| 0.01|
-|     | SOR=1| 0.67| 0.51| 0.41| 0.33| 0.27| 0.22| 0.17| 0.11|
-| 0.2 |      |RR=1 | 0.67| 0.50| 0.40| 0.33| 0.29| 0.25| 0.22|
-|     |      |OR=1 | 0.58| 0.38| 0.25| 0.17| 0.11| 0.06| 0.03|
-|     |      |SOR=1| 0.76| 0.61| 0.50| 0.41| 0.33| 0.25| 0.17|
-| 0.3 |      |     |RR=1 | 0.75| 0.60| 0.50| 0.43| 0.38| 0.33|
-|     |      |     |OR=1 | 0.64| 0.43| 0.29| 0.18| 0.11| 0.05|
-|     |      |     |SOR=1| 0.80| 0.65| 0.53| 0.43| 0.33| 0.22|
-| 0.4 |      |     |     |RR=1 | 0.80| 0.67| 0.57| 0.50| 0.44|
-|     |      |     |     |OR=1 | 0.67| 0.44| 0.29| 0.17| 0.07|
-|     |      |     |     |SOR=1| 0.82| 0.67| 0.53| 0.41| 0.27|
-| 0.5 |      |     |     |     |RR=1 | 0.83| 0.71| 0.63| 0.56|
-|     |      |     |     |     |OR=1 | 0.67| 0.43| 0.25| 0.11|
-|     |      |     |     |     |SOR=1| 0.82| 0.65| 0.50| 0.33|
-| 0.6 |      |     |     |     |     |RR=1 | 0.86| 0.75| 0.67|
-|     |      |     |     |     |     |OR=1 | 0.64| 0.38| 0.17|
-|     |      |     |     |     |     |SOR=1| 0.80| 0.61| 0.41|
-| 0.7 |      |     |     |     |     |     |RR=1 | 0.88| 0.78|
-|     |      |     |     |     |     |     |OR=1 | 0.58| 0.26|
-|     |      |     |     |     |     |     |SOR=1| 0.76| 0.51|
-| 0.8 |      |     |     |     |     |     |     |RR=1 | 0.89|
-|     |      |     |     |     |     |     |     |OR=1 | 0.44|
-|     |      |     |     |     |     |     |     |SOR=1| 0.67|
+関数*S*(*x*)を具体的に書くこともできます。生存時間が、ハザードが時間を通じて一定ということは、指数分布に従うと仮定したことになります（これはKaplan-Meier曲線とは別ものです）。指数分布の形状を決めるパラメータ（ハザード）を、*λ*で表します。このとき指数分布の生存関数とハザードには、以下のような関係があります。
+
+$S(x)=\mathrm{exp}(-\lambda x)$
+
+さて、ハザードは生存曲線が下がるスピードを決める数値です。生存時間がどのくらいの長さなのかは、中央値で測ることができます。生存時間中央値*M*は、生存確率50%つまり*S*(*x*)=0.5になるような時間*x*のことです。つまり、指数分布では$0.5=\mathrm{exp}(-\lambda M)$と関係が成り立つので、生存時間中央値*M*は、ハザード*λ*から以下のように計算することができます。
+
+$M=\frac{\mathrm{log}(0.5)}{\lambda}\approx\frac{0.7}{\lambda}$
+
+最後に、時点*x*の疾患リスクを*π*とすると、リスクとハザードは、以下の式で結びついています。
+
+$\pi=1-S(x)=1-\mathrm{exp}(-\lambda x)$
+
+
+```{r echo=FALSE, warning=FALSE}
+generate_data <- function(n=200, hr1, hr2) {
+  stoma <- rbinom(n, size = 1, prob = 0.4)
+  sex <- rbinom(n, size = 1, prob = 0.5)
+  age <- rnorm(n, mean = 65 + 3 * stoma, sd = 8)
+  hazard_relapse   <- ifelse(stoma == 1, hr1*0.10, 0.10) # 再発のハザード（大きいほど早く起こる）
+  hazard_death     <- ifelse(stoma == 1, hr2*0.10, 0.10) # 死亡のハザード（大きいほど早く起こる）
+  hazard_censoring <- 0.05                               # 打ち切りハザード（群に依存しない）
+  
+  t_relapse   <- rexp(n, rate = hazard_relapse)   # 再発までの潜在時間
+  t_death     <- rexp(n, rate = hazard_death)     # 死亡までの潜在時間
+  t_censoring <- rexp(n, rate = hazard_censoring) # 打ち切りまでの潜在時間
+  
+  ## --- 全生存期間（OS） ----------------------------------------
+  time_os   <- pmin(t_death, t_censoring)
+  status_os <- as.integer(t_death <= t_censoring)  # 1 = 死亡, 0 = 打ち切り
+  
+  ## --- 無再発存期間（RFS） -------------------------------------
+  time_rfs <- pmin(t_relapse, t_death, t_censoring)
+  
+  status_rfs <- integer(n)
+  status_rfs[time_rfs == t_relapse & time_rfs < t_censoring] <- 1 # 再発
+  status_rfs[time_rfs == t_death & time_rfs < t_censoring] <- 1   # 死亡
+  
+  ## --- 累積再発率（CIR） + 競合リスク --------------------------
+  time_cir <- pmin(t_relapse, t_death, t_censoring)
+  
+  status_cir <- integer(n)
+  status_cir[time_cir == t_relapse & time_cir < t_censoring] <- 1 # イベント1: 再発
+  status_cir[time_cir == t_death & time_cir < t_censoring] <- 2   # イベント2: 競合リスクとしての死亡
+  
+  ## --- データフレームにまとめる --------------------------------
+  dat <- data.frame(
+    id         = 1:n,
+    sex        = factor(sex, levels = c(0, 1), labels = c("WOMAN", "MAN")),
+    age        = age,
+    stoma      = factor(stoma, levels = c(0, 1),
+                        labels = c("WITHOUT STOMA", "WITH STOMA")),
+    time_os    = time_os,
+    status_os  = status_os,
+    time_rfs   = time_rfs,
+    status_rfs = status_rfs,
+    time_cir   = time_cir,
+    status_cir = status_cir
+  )
+}
+```
+
+イメージしやすいように、以前`cifmodeling`パッケージの`cifplot()`で描いたKaplan–Meier曲線をもう一度示しておきます。
+
+```{r warning=FALSE}
+# devtools::install_github("gestimation/cifmodeling") #インストールが必要なら実行 
+library(cifmodeling)
+set.seed(46)
+dat <- generate_data(hr1=2, hr2=1.5) #再発ハザード比2, 死亡ハザード比1.5のデータ生成
+
+cifplot(Event(time_os, status_os) ~ stoma,
+  data         = dat,
+  outcome.type = "survival",
+  label.y      = "Overall survival"
+)
+```
 :::
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「平方根なんて論文書くとき勝手に計算していいのかね」
+私「わからん。数式はわからん」
 :::
 
 ::: voice-father
-お父さん「リスク比を推定することが目的なら、オッズ比の平方根を論文で示してもいいかもって気はする。Methodsで説明していれば。でも、ふつうのコホート研究をするんだったら、リスク比を計算するのが素直だと思うけど」
+お父さん「そう？数学の難しさ自体は高校レベルなんだけど。きっと理解しにくいのは、数式がデータ上のどういう概念を結びつけているのかっていう部分なんだだと思うんだけど。そこは慣れるしかないなあ。次にハザード比」
 :::
 ::::::::::::::::::::::::::::::::: 
 
-::: {.callout-note title="ケース・コントロール研究とオッズ比"}
 
-古典的なケース・コントロール研究は、コホートの中から疾患を発生したケースを特定し、疾患を発生しなかったものの中からコントロールを選択し、ケースとコントロールの曝露状況を比較する研究です。言い換えると、この研究デザインでは、一部の集団のみ（ケースとコントロールのみ）について、過去の曝露状況を調査します。そうすると、コホートの一部しか曝露状況がわからないから、曝露群・非曝露群のリスクの分母がわかりませんよね。そこで、リスク比の代わりに「曝露オッズ比」を求める、と疫学の教科書には書かれています。ただし、古典的なケース・コントロール研究とは違い、最近ではデータベースが利用できたり、研究デザインを工夫していたりするため、リスク比を計算できる状況も増えてきています。
+::: {.callout-note title="リスクとハザード比の関係"}
+
+群1と群2のアウトカムを比較する状況を考えましょう。群1の時点*x*の疾患リスクを$\pi_1$、群2の時点*x*の疾患リスクを$\pi_2$とします。さらに、それぞれの群のハザードを$\lambda_1$と$\lambda_2$、生存時間中央値を$M_1$と$M_2$とします。
+
+上で述べた関係式を適用すると、指数分布の下で、ハザード比は以下のように表現することができます。
+
+-   ハザード比（指数分布を仮定）
+
+    $HR=\frac{\lambda_1}{\lambda_2}=\frac{M_2}{M_1}=\frac{\mathrm{log}(\pi_1)}{\mathrm{log}(\pi_2)}$
+
+指数分布では、ハザードは時間を通じて一定でした。その一方で、Cox比例ハザードモデルでは、ハザードを時間の関数$\lambda_1(x)$と$\lambda_2(x)$と考え、しかも両者が比例関係にあると仮定します。
+
+-   ハザード比（比例ハザード性を仮定）
+
+    $HR=\frac{\lambda_1(x)}{\lambda_2(x)}$
 :::
+
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
+お父さん「はっきりいうとね、ハザードが直感的にわかる人の方が少ないよ。だから安心していい」
+:::
+
+::: voice-daughter
+娘「え、そうなの？なんか“知らないといけない基本”みたいに思って焦った」
+:::
+
+::: voice-father
+お父さん「ハザードはね、患者さんの健康状態を表す“見えない時計”だと思うといい」
+:::
+
+::: voice-daughter
+娘「見えない時計？」
+:::
+
+::: voice-father
+お父さん「治療Aを受けた患者は、ちょっと速く進む時計を持っている。治療B群の人は、少し遅い時計を持っている。ハザード比は、その2つの時計が“どれくらい違う速さで動くか”の比なんだ」
+:::
+
+::: voice-daughter
+娘「なるほど、時間が進むスピードの違いなら、イメージしやすいかも」
+:::
+
+::: voice-father
+お父さん「ただし、ここが重要。時計の進み方は、必ずしも一定とは限らない。最初は治療Bが有利でも、途中から追いつかれることだってある」
+:::
+
+::: voice-daughter
+娘「それ、実際の患者さんでもあるかも！」
+:::
+
+::: voice-father
+お父さん「それなのに多くの論文で“ハザード比＝一定”という前提で解析する。Cox回帰が標準的に使われるからね。だから、比例ハザード性が破綻すると、ハザード比の解釈が急に怪しくなる」
+:::
+
+
+::: {.callout-note title="シミュレーションデータにおける時点ごとのリスク比の推定"}
+
+
+さっきの「見えない時計」をデータで眺めてみましょう。以前と同じ、ストーマ造設の有無で死亡のハザードが異なる生存時間データをシミュレーションし、**時点ごとのリスク比（RR）** を推定してみます。**ハザード比**は「時計の速さの比」でしたが、「術後10年時点の死亡リスクは、ストーマあり群が何倍か」のようにリスク比の方が、解釈しやすいこともあります。Cox回帰では時点を通じて1つのハザード比を仮定するのに対して、`cifmodeling`の`polyreg()`では、時点を通じて一定のリスク比だけでなく、任意の時点tごとのリスク比も推定できます。
+
+先ほどのシミュレーションデータを使って、`time.point`を変えた`polyreg()`を当てはめることで、術後5年・10年・20年時点の死亡リスク比を推定します。アウトカム（OS）は`Event(time_os,status_os)`、曝露変数であるストーマの有無は`exposure="stoma"`で指定しています。
+
+```{r warning=FALSE}
+rr_at_5 <- polyreg(nuisance.model=Event(time_os,status_os)~1, exposure="stoma", data=dat, 
+                    effect.measure1="RR", time.point=5, outcome.type="survival")
+summary(rr_at_5)
+rr_at_10 <- polyreg(nuisance.model=Event(time_os,status_os)~1, exposure="stoma", data=dat, 
+                    effect.measure1="RR", time.point=10, outcome.type="survival")
+summary(rr_at_10)
+rr_at_20 <- polyreg(nuisance.model=Event(time_os,status_os)~1, exposure="stoma", data=dat, 
+                    effect.measure1="RR", time.point=20, outcome.type="survival")
+summary(rr_at_20)
+```
+
+ハザード比は一定の下でデータを生成していますが、時間が経つにつれリスク比は小さく推定されることがわかります。冒頭のKaplan-Meier曲線もあわせてみてみてください。
+:::
+::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
-リスク比とオッズ比が1より小さいとき、オッズ比はリスク比より必ず小さくなるといいました。それでは、2群をオッズ比で比較するときのp値は、リスク比で比較するときのp値より、小さくなる（つまり有意になりやすいので得をする）のでしょうか。実際にデータから計算されたp値だと、検定の種類の選び方に影響されるし、偶然性も入るので、理論上の期待値がどうなるか考えてみてください。
+Kaplan-Meier法による生存曲線の推定が妥当な状況として正しいのは、次のうちどれでしょうか。
 
-1.  オッズ比のp値は、リスク比のp値より、期待値の上で小さい
-2.  オッズ比のp値は、リスク比のp値より、期待値の上で大きい
-3.  オッズ比のp値は、リスク比のp値と、期待値の上で等しい
+1.  生存時間が正規分布するとき
+2.  打ち切りの理由が疾患の悪化によらないとき
+3.  2群の打ち切り確率に統計学的な有意差がなかったとき
+4.  試験治療群とコントロール群の間で比例ハザード性が成り立つとき
 :::
 
 ::: {.callout-note collapse="true" title="答えはこちら"}
--   **正解は3です**
+- **正解は2です**
 
-リスク比やオッズ比は最尤法で推定することが普通です。最尤法を用いるとき、検定の性能（検出力など）は、指標の選び方によらず一定です。
+Kaplan-Meier法では、生存時間が正規分布したり、比例ハザードが成り立ったりする必要はありません（これは*t*検定やCox回帰の前提条件ですね）。疾患の悪化に伴って、試験の途中で患者が追跡できなくなると、推定された生存曲線にバイアスが生じてしまいます。2群の生存曲線を比べるとき、それぞれの群の打ち切り確率を比較することがあります。有意差があればバイアスがあるといえますが、たとえばサンプルサイズが小さいときは有意差が出ませんから、Kaplan-Meier法が妥当という証拠にはなりません。逆にいうと、打ち切りがランダムに起きていることが、Kaplan-Meier法でもっとも重要な仮定です。
 :::
-
-### 文献
-
-- Furukawa TA, Guyatt GH, Griffith LE. Can we individualize the ‘number needed to treat’? An empirical study of summary effect measures in meta-analysis. Int J Epidemiol 2002; 31: 72-6
 
 ### Continuation of their story
 
