--- a/jp/epidemiology-2.qmd
+++ b/jp/epidemiology-2.qmd
@@ -142,235 +142,201 @@ a:hover {
 # Story and Quiz − Epidemiology II
 
 ::: serif-block
-　　　　　　　　　　　　　　　　　　　　Keywords: binary data, risk- and effect-measures, survival/competing-risk, observational study, paper writing
+　　　　　　　　　　　　　　　　　Keywords: binary data, risk- and effect-measures, observational study, paper writing
 :::
 
 ------------------------------------------------------------------------
 
-### リスクと時間の関係
+### 疾患リスクとターゲット集団
 
 ::::::::::::::::::::::::::::::::: dialogue
-::: voice-daughter
-私「お父さんさ、さっき寄与割合を計算してるのをみてて思ったんだけどね。またわからないことがあるんだ」
-:::
-
 ::: voice-father
-お父さん「なに？」
+お父さん「ワクチンとは別の話題なんだけど、喫煙歴のあるがんの患者さんって、減ったと思う？」
 :::
 
 ::: voice-daughter
-私「がん検診後、10年、12年、20年って見ていくと、寄与割合が変わるって話だったでしょ。リスクには時間の概念があるって。あれって、2値データじゃなくて生存時間データになってない？ていうか、あれは生存曲線か」
+私「そうね、昔よりは少なくなったんじゃない？」
 :::
 
 ::: voice-father
-お父さん「そうだよ。リスクと生存曲線は表裏一体なんだ」
+お父さん「でも、日本のがんの統計上は、まだまだ喫煙は健康問題のひとつなんだ。がん罹患のリスク要因は、感染症、喫煙、飲酒の順に影響が大きいと推定されている」
 :::
 
 ::: voice-daughter
-私「寄与割合とかリスク比とかって、時間とともに変化するっていうけど、ハザード比は変化しないんだっけ」
+私「喫煙率は下がってるのにちょっと意外だね。でもどのがん登録でも、喫煙情報は絶対調べるよね」
 :::
 
 ::: voice-father
-お父さん「変化しない。正確にいうと、生存曲線をみると変化している状況もあり得るんだけど、無理やり時間を通じてハザード比は一定と仮定して、計算してる」
+お父さん「感染症、喫煙、飲酒が、がん罹患に寄与する割合は、16%、15%、6%っていわれてる。この指標を、集団寄与割合っていうんだけど、これもただのパーセントじゃない」
 :::
 
 ::: voice-daughter
-私「リスク比は変化するけどハザード比は変化しないの？ぴんとこないなあ」
+私「それはそうだよね。喫煙者の15%ががんになる、なんて思わないもの。でも正確な意味はわかんないな」
 :::
 
 ::: voice-father
-お父さん「えーっと、教科書通りに説明するとこうなるんだけど。まずはリスクとハザードからはじめるね」
-:::
-:::::::::::::::::::::::::::::::::
-
-
-
-::: {.callout-note title="生存曲線とハザードの関係"}
-Kaplan-Meier曲線もまた、割合の一種と考えることができますが、見え方がずいぶん違います。つまり、Kaplan-Meier曲線はグラフですし、時間の概念が含まれたりします。さらに、Kaplan-Meier曲線は、そもそも2値データではなく生存時間データに用いられる手法ですし、ハザード比との関係が重要です。ここでは、ハザードが時間を通じて一定という単純な状況で、そのあたりを整理しましょう。
-
-Kaplan-Meier曲線は、生存時間データから計算された推定値を、時間軸（*x*軸）に沿ってグラフにしたものです。これを数式で書くなら、「生存曲線を時間*x*の関数*S*(*x*)で表す」ということになります。
-
-関数*S*(*x*)を具体的に書くこともできます。生存時間が、ハザードが時間を通じて一定ということは、指数分布に従うと仮定したことになります（これはKaplan-Meier曲線とは別ものです）。指数分布の形状を決めるパラメータ（ハザード）を、*λ*で表します。このとき指数分布の生存関数とハザードには、以下のような関係があります。
-
-$S(x)=\mathrm{exp}(-\lambda x)$
-
-さて、ハザードは生存曲線が下がるスピードを決める数値です。生存時間がどのくらいの長さなのかは、中央値で測ることができます。生存時間中央値*M*は、生存確率50%つまり*S*(*x*)=0.5になるような時間*x*のことです。つまり、指数分布では$0.5=\mathrm{exp}(-\lambda M)$と関係が成り立つので、生存時間中央値*M*は、ハザード*λ*から以下のように計算することができます。
-
-$M=\frac{\mathrm{log}(0.5)}{\lambda}\approx\frac{0.7}{\lambda}$
-
-最後に、時点*x*の疾患リスクを*π*とすると、リスクとハザードは、以下の式で結びついています。
-
-$\pi=1-S(x)=1-\mathrm{exp}(-\lambda x)$
-
-
-```{r echo=FALSE, warning=FALSE}
-generate_data <- function(n=200, hr1, hr2) {
-  stoma <- rbinom(n, size = 1, prob = 0.4)
-  sex <- rbinom(n, size = 1, prob = 0.5)
-  age <- rnorm(n, mean = 65 + 3 * stoma, sd = 8)
-  hazard_relapse   <- ifelse(stoma == 1, hr1*0.10, 0.10) # 再発のハザード（大きいほど早く起こる）
-  hazard_death     <- ifelse(stoma == 1, hr2*0.10, 0.10) # 死亡のハザード（大きいほど早く起こる）
-  hazard_censoring <- 0.05                               # 打ち切りハザード（群に依存しない）
-  
-  t_relapse   <- rexp(n, rate = hazard_relapse)   # 再発までの潜在時間
-  t_death     <- rexp(n, rate = hazard_death)     # 死亡までの潜在時間
-  t_censoring <- rexp(n, rate = hazard_censoring) # 打ち切りまでの潜在時間
-  
-  ## --- 全生存期間（OS） ----------------------------------------
-  time_os   <- pmin(t_death, t_censoring)
-  status_os <- as.integer(t_death <= t_censoring)  # 1 = 死亡, 0 = 打ち切り
-  
-  ## --- 無再発存期間（RFS） -------------------------------------
-  time_rfs <- pmin(t_relapse, t_death, t_censoring)
-  
-  status_rfs <- integer(n)
-  status_rfs[time_rfs == t_relapse & time_rfs < t_censoring] <- 1 # 再発
-  status_rfs[time_rfs == t_death & time_rfs < t_censoring] <- 1   # 死亡
-  
-  ## --- 累積再発率（CIR） + 競合リスク --------------------------
-  time_cir <- pmin(t_relapse, t_death, t_censoring)
-  
-  status_cir <- integer(n)
-  status_cir[time_cir == t_relapse & time_cir < t_censoring] <- 1 # イベント1: 再発
-  status_cir[time_cir == t_death & time_cir < t_censoring] <- 2   # イベント2: 競合リスクとしての死亡
-  
-  ## --- データフレームにまとめる --------------------------------
-  dat <- data.frame(
-    id         = 1:n,
-    sex        = factor(sex, levels = c(0, 1), labels = c("WOMAN", "MAN")),
-    age        = age,
-    stoma      = factor(stoma, levels = c(0, 1),
-                        labels = c("WITHOUT STOMA", "WITH STOMA")),
-    time_os    = time_os,
-    status_os  = status_os,
-    time_rfs   = time_rfs,
-    status_rfs = status_rfs,
-    time_cir   = time_cir,
-    status_cir = status_cir
-  )
-}
-```
-
-イメージしやすいように、以前`cifmodeling`パッケージの`cifplot()`で描いたKaplan–Meier曲線をもう一度示しておきます。
-
-```{r warning=FALSE}
-# devtools::install_github("gestimation/cifmodeling") #インストールが必要なら実行 
-library(cifmodeling)
-set.seed(46)
-dat <- generate_data(hr1=2, hr2=1.5) #再発ハザード比2, 死亡ハザード比1.5のデータ生成
-
-cifplot(Event(time_os, status_os) ~ stoma,
-  data         = dat,
-  outcome.type = "survival",
-  label.y      = "Overall survival"
-)
-```
-:::
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-daughter
-私「わからん。数式はわからん」
-:::
-
-::: voice-father
-お父さん「そう？数学の難しさ自体は高校レベルなんだけど。きっと理解しにくいのは、数式がデータ上のどういう概念を結びつけているのかっていう部分なんだだと思うんだけど。そこは慣れるしかないなあ。次にハザード比」
+お父さん「ほら、喫煙者のがん罹患を真っ先にイメージしちゃうでしょ。そこも誤解ポイント。集団寄与割合が想定している集団は、喫煙者じゃないんだ」
 :::
 ::::::::::::::::::::::::::::::::: 
 
+::: {.callout-note title="寄与割合とその関連指標"}
+疫学研究では、一般集団を対象にして、環境物質や生活習慣といったリスク因子を調べることが多く、そのために寄与割合（attributable fraction）という別の指標も用いられます。寄与割合は、特定の集団におけるリスク因子への曝露が、どのくらい疾患発症に寄与するかを表す指標です。ただし、寄与割合には、歴史的に異なる呼ばれ方をしており、どのような集団をターゲットとするかで定義も変わるので、正確に扱うべきです。
 
-::: {.callout-note title="リスクとハザード比の関係"}
+曝露がリスク因子として働くときに用いられる指標として、多くの疫学の教科書で説明されているのは、以下の定義によるものです。この指標では、群1が曝露あり、群2が曝露なしと考えています。そして、群1から曝露を取り除いたとき、どのくらい疾患が減るかを表しています。
 
-群1と群2のアウトカムを比較する状況を考えましょう。群1の時点*x*の疾患リスクを$\pi_1$、群2の時点*x*の疾患リスクを$\pi_2$とします。さらに、それぞれの群のハザードを$\lambda_1$と$\lambda_2$、生存時間中央値を$M_1$と$M_2$とします。
+-   Excess fraction（またはrisk fraction）
 
-上で述べた関係式を適用すると、指数分布の下で、ハザード比は以下のように表現することができます。
+    $EF=\frac{\pi_1-\pi_2}{\pi_1}=1-\frac{1}{RR}$
 
--   ハザード比（指数分布を仮定）
+一方で、たとえば喫煙に対する禁煙のように、曝露が予防的に作用するとき、以下の指標が用いられます。群1が曝露あり、群2が曝露なしという点は同じですが、ターゲットは群2です。なお、この式はワクチン有効率と同じです。
 
-    $HR=\frac{\lambda_1}{\lambda_2}=\frac{M_2}{M_1}=\frac{\mathrm{log}(\pi_1)}{\mathrm{log}(\pi_2)}$
+-   Preventable fraction
 
-指数分布では、ハザードは時間を通じて一定でした。その一方で、Cox比例ハザードモデルでは、ハザードを時間の関数$\lambda_1(x)$と$\lambda_2(x)$と考え、しかも両者が比例関係にあると仮定します。
+    $PF=\frac{\pi_2-\pi_1}{\pi_2}=1-RR$
 
--   ハザード比（比例ハザード性を仮定）
+| 指標 | 分母（ターゲット集団） | 何を表す？ | いつ使う？ |
+|------|------|---------------------------|-------------|------------|
+| Excess fraction（寄与割合） | **曝露者だけ**（E=1） | 曝露集団のうち、どれだけの割合が曝露のため疾患を生じたか | 喫煙、飲酒、化学物質などの有害曝露の個人への影響を知りたいとき |
+| Preventable fraction（予防寄与割合） | **曝露者だけ**（E=1） | 曝露集団のうち、どれだけ予防的な曝露が疾患を防いだか | ワクチン・検診・運動などの予防法が、個人のリスクをどれだけ下げたか知りたいとき |
+| Population attributable fraction（集団寄与割合） | **全員**（集団全体） | 集団全体の疾患のうち、どれだけがその曝露のため生じているか | 公衆衛生・医療政策で、曝露をなくせば集団でどれだけ減るかを評価するとき |
 
-    $HR=\frac{\lambda_1(x)}{\lambda_2(x)}$
+**数値例**
+
+いくつかの指標の数値例を示しておきましょう。この表は、 曝露と膵がんリスクの関係を調べる仮想的なコホート研究から得られたデータを表しています。上の式を用いて、リスク差、リスク比、オッズ比、excess fractionを求めると、以下のような結果が得られます。ワクチン有効率と同じように、excess fractionもパーセントで示すことがあるため、要注意です。
+
+|                   | 曝露あり | 曝露なし | 効果の指標 |
+|-------------------|----------|----------|------------|
+| 合計              |          |          |            |
+| 　膵がんあり      | 15       | 12       |            |
+| 　膵がんなし      | 365      | 868      |            |
+| 　リスク          | 3.9%     | 1.4%     |            |
+| 　リスク差        |          |          | 2.5%       |
+| 　リスク比        |          |          | 3倍        |
+| 　オッズ比        |          |          | 3倍        |
+| 　Excess fraction |          |          | 74%        |
+
 :::
 
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「これもワクチン有効率と同じだね。パーセントっていわれるとただの割合と思っちゃう。よく考えると、Excess fractionなんて、パーセントがなにを意味するのか謎」
+:::
+
+::: voice-father
+お父さん「そっか、そうだよね。あのね、疾患リスクで考えるから混乱しがちなのかもしれない。たとえ話をさせてよ。60歳になってがん検診にきた人が4人いたとする。話をわかりやすくするために、4人の健康状態はまったく同じだとしよう。そのうち、最初の2人はがん検診が陽性で、根治切除できたとする。その後、71歳と79歳まで生きることができた。つまり、がん検診後の生存期間は11年と19年」
+:::
+
+::: voice-daughter
+私「ふんふん」
+:::
+
+::: voice-father
+お父さん「残りの2人は、本当はがんだったのに、検診では見つけられなかった。そのため、67歳と73歳で亡くなった。つまり、がん検診後の生存期間は7年と13年。じゃあ、仮にこの2人を60歳のとき根治切除できたとしたら、生存期間は何割長くなるだろう」
+:::
+
+::: voice-daughter
+私「えっと、がん検診陽性の2人の生存期間は平均15年でしょ。がん検診陰性の2人の生存期間は平均10年。だから、(15-10)/10=0.5だから、50%の延長」**
+:::
+
+::: voice-father
+お父さん「じゃあ、別の質問をするよ。もし、がん検診陽性の2人を60歳のとき根治切除できなかったとしたら、生存期間はどれくらい失われる？」
+:::
+
+::: voice-daughter
+私「(10-15)/15=-0.33だから、33%減っちゃうね」
+:::
+
+::: voice-father
+お父さん「そう。つまり、陽性2人と陰性2人のどちらをターゲットにするかで、データは同じでも、根治切除の生存期間に寄与する割合が変わってくる。ここが寄与割合の複雑なところなんだ。さっきのexcess fractionは、この例でいうと根治切除できなかった2人をターゲットと考えている。Preventable fractionのターゲットは、根治切除できた2人に対応している」
+:::
+
+::: voice-daughter
+私「なるほど、ターゲット集団を分母にとるのね。ターゲットがあるのが、リスク差とかリスク比とかとの違いってわけだ」
+:::
+
+::: voice-father
+お父さん「いや？効果の指標にはどれも、表に出ないだけでターゲット集団がある。たとえば術後の大腸がん患者を対象にランダム化臨床試験をして、補助化学療法をすると死亡リスク差が-5%になったとするでしょ。これって、術後の大腸がん患者全体に補助化学療法をすべきって解釈にならない？」
+:::
+
+::: voice-daughter
+私「まあねえ」
+:::
+
+::: voice-father
+お父さん「つまり臨床試験の集団全体がターゲット集団になる。因果リスク差とか、因果リスク比っていう言葉があるんだけど、これは集団全体に別の治療をしたときや、集団全体がリスク因子に曝露したとき、リスクがどう変化するかを表してるんだ」
+:::
+
+::: voice-daughter
+私「ふーん。じゃあワクチン有効率はどうなの？」
+:::
+
+::: voice-father
+お父さん「ワクチン有効率も臨床試験で推定するよね。だからそのワクチンのターゲット全体が、ワクチンを接種したとき、それがプラセボだったときに比べ、何割感染症が減るかっていう解釈になる。現場では、既存のワクチンが普及していることがほとんどでしょ。そこにワクチン有効率98%の新しいワクチンを投入しても、感染症が98%減ることにはならない」
+:::
+::::::::::::::::::::::::::::::::: 
+
+::: {.callout-note title="ターゲット集団"}
+治療や曝露とアウトカムの因果関係を扱うときには、どのような集団を考えているかをはっきりさせる必要があります。一例として、根治切除後の直腸がん患者におけるストーマ造設の有無と復職率との因果関係を考えてみましょう。このときストーマ保有者と非保有者を比較する因果リスク差は、「根治切除後の直腸がん患者全体」をターゲット集団としています。ストーマ保有者と非保有者という別の集団を比べているのに、患者全体がターゲットというのは奇妙にみえるかもしれません。しかし因果推論では、「患者全体がストーマを造設したとき」と「患者全体がストーマを造設しなかったとき」という仮想的な状況を対比することで、ストーマ造設が復職率を低下させたかがわかる、という反事実の考え方をするのです。
+:::
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-お父さん「はっきりいうとね、ハザードが直感的にわかる人の方が少ないよ。だから安心していい」
+お父さん「もうひとつ気を付けないといけないのは、リスクには時間の概念が隠れていること。検診後10年時点の死亡確率を考えてみよう。陽性2人の死亡確率は0%、陰性2人の死亡確率50%だよね。このときのexcess fractionはわかる？」
 :::
 
 ::: voice-daughter
-娘「え、そうなの？なんか“知らないといけない基本”みたいに思って焦った」
+私「うん。(0.5-0)/0.5=1でしょ」
 :::
 
 ::: voice-father
-お父さん「ハザードはね、患者さんの健康状態を表す“見えない時計”だと思うといい」
+お父さん「そう、つまり根治切除していれば、がん陰性の2人の死亡は100%防げたという意味になる。でもさ、がん検診後、12年経つとどうなる？」
 :::
 
 ::: voice-daughter
-娘「見えない時計？」
+私「(0.5-0.5)/0.5=0になるね」
 :::
 
 ::: voice-father
-お父さん「治療Aを受けた患者は、ちょっと速く進む時計を持っている。治療B群の人は、少し遅い時計を持っている。ハザード比は、その2つの時計が“どれくらい違う速さで動くか”の比なんだ」
+お父さん「じゃあ、がん検診後、20年経つと？」
 :::
 
 ::: voice-daughter
-娘「なるほど、時間が進むスピードの違いなら、イメージしやすいかも」
+私「生存者はいなくなるね。(1-1)/1=0かな」
 :::
 
 ::: voice-father
-お父さん「ただし、ここが重要。時計の進み方は、必ずしも一定とは限らない。最初は治療Bが有利でも、途中から追いつかれることだってある」
+お父さん「そういうこと。寄与割合は、時間とともに変化することがあり得るんだ。時間が隠れているっていいうのは、リスク比やオッズ比も同じだけどね」
 :::
 
 ::: voice-daughter
-娘「それ、実際の患者さんでもあるかも！」
+私「なるほどね」
 :::
 
 ::: voice-father
-お父さん「それなのに多くの論文で“ハザード比＝一定”という前提で解析する。Cox回帰が標準的に使われるからね。だから、比例ハザード性が破綻すると、ハザード比の解釈が急に怪しくなる」
-:::
-
-
-::: {.callout-note title="シミュレーションデータにおける時点ごとのリスク比の推定"}
-
-
-さっきの「見えない時計」をデータで眺めてみましょう。以前と同じ、ストーマ造設の有無で死亡のハザードが異なる生存時間データをシミュレーションし、**時点ごとのリスク比（RR）** を推定してみます。**ハザード比**は「時計の速さの比」でしたが、「術後10年時点の死亡リスクは、ストーマあり群が何倍か」のようにリスク比の方が、解釈しやすいこともあります。Cox回帰では時点を通じて1つのハザード比を仮定するのに対して、`cifmodeling`の`polyreg()`では、時点を通じて一定のリスク比だけでなく、任意の時点tごとのリスク比も推定できます。
-
-先ほどのシミュレーションデータを使って、`time.point`を変えた`polyreg()`を当てはめることで、術後5年・10年・20年時点の死亡リスク比を推定します。アウトカム（OS）は`Event(time_os,status_os)`、曝露変数であるストーマの有無は`exposure="stoma"`で指定しています。
-
-```{r warning=FALSE}
-rr_at_5 <- polyreg(nuisance.model=Event(time_os,status_os)~1, exposure="stoma", data=dat, 
-                    effect.measure1="RR", time.point=5, outcome.type="survival")
-summary(rr_at_5)
-rr_at_10 <- polyreg(nuisance.model=Event(time_os,status_os)~1, exposure="stoma", data=dat, 
-                    effect.measure1="RR", time.point=10, outcome.type="survival")
-summary(rr_at_10)
-rr_at_20 <- polyreg(nuisance.model=Event(time_os,status_os)~1, exposure="stoma", data=dat, 
-                    effect.measure1="RR", time.point=20, outcome.type="survival")
-summary(rr_at_20)
-```
-
-ハザード比は一定の下でデータを生成していますが、時間が経つにつれリスク比は小さく推定されることがわかります。冒頭のKaplan-Meier曲線もあわせてみてみてください。
+お父さん「まとめるとね、"何%減る"とか"何%に効く"というパーセントを見たら、どの集団のことなのか、どの時点のリスクかを意識しよう、ということだね」
 :::
 ::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
-Kaplan-Meier法による生存曲線の推定が妥当な状況として正しいのは、次のうちどれでしょうか。
+寄与割合は、excess fractionやpreventable fraction以外に、曝露・非曝露を合わせた集団全体をターゲットにすることもあります。先ほど用いたがん検診の例で考えましょう。仮にがん検診の感度が100%だったら、先ほどの状況（感度50%）に比べて、検診後15年後に死亡している人数は、どれくらい減ると期待されるでしょうか。
 
-1.  生存時間が正規分布するとき
-2.  打ち切りの理由が疾患の悪化によらないとき
-3.  2群の打ち切り確率に統計学的な有意差がなかったとき
-4.  試験治療群とコントロール群の間で比例ハザード性が成り立つとき
+1.  0%
+2.  33%
+3.  50%
+4.  100%
 :::
 
 ::: {.callout-note collapse="true" title="答えはこちら"}
-- **正解は2です**
+-   **正解は3です**
 
-Kaplan-Meier法では、生存時間が正規分布したり、比例ハザードが成り立ったりする必要はありません（これは*t*検定やCox回帰の前提条件ですね）。疾患の悪化に伴って、試験の途中で患者が追跡できなくなると、推定された生存曲線にバイアスが生じてしまいます。2群の生存曲線を比べるとき、それぞれの群の打ち切り確率を比較することがあります。有意差があればバイアスがあるといえますが、たとえばサンプルサイズが小さいときは有意差が出ませんから、Kaplan-Meier法が妥当という証拠にはなりません。逆にいうと、打ち切りがランダムに起きていることが、Kaplan-Meier法でもっとも重要な仮定です。
+この4人の生存期間は、11年、19年、7年、13年なので、15年後の死亡数は3人です。また、根治切除後の死亡率は50%なので、根治切除後できなかった2人が、仮にがん検診でがんを見つけられて、根治切除できたとしたら、死亡率は50%と期待されます。この仮想的な状況における死亡数は、1+2×50%=2人です。つまり、検診後15年後に死亡している人数は33%減ったことになります。
+
+この計算は、集団全体をターゲットとする寄与割合（population attributable fraction）を求めていることに他なりません。集団全体における曝露割合を*p*で書くと、population attributable fractionは、以下の式で表されます。
+
+$PAF=\frac{p(RR-1)}{p(RR-1)+1}$
+
+がん検診の例では、*p*=0.5、15年死亡リスク比は*RR*=2なので、これを代入すると、*PAF*=0.5(2-1)/{0.5(2-1)+1}=0.33となり、上の正解と一致します。
 :::
 
 ### Continuation of their story
